update: black lint

--- a/notebooks/0-test-sdv.ipynb
+++ b/notebooks/0-test-sdv.ipynb
@@ -33,9 +33,9 @@
    "source": [
     "demo_data = load_timeseries_demo()\n",
     "len(demo_data)\n",
-    "entity_columns = ['Symbol']\n",
-    "context_columns = ['MarketCap', 'Sector', 'Industry']\n",
-    "sequence_index = 'Date'"
+    "entity_columns = [\"Symbol\"]\n",
+    "context_columns = [\"MarketCap\", \"Sector\", \"Industry\"]\n",
+    "sequence_index = \"Date\""
    ]
   },
   {
@@ -45,8 +45,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = PAR(   entity_columns=entity_columns, context_columns=context_columns,\n",
-    "            sequence_index=sequence_index, verbose=True)"
+    "model = PAR(\n",
+    "    entity_columns=entity_columns,\n",
+    "    context_columns=context_columns,\n",
+    "    sequence_index=sequence_index,\n",
+    "    verbose=True,\n",
+    ")"
    ]
   },
   {
@@ -79,7 +83,7 @@
    "outputs": [],
    "source": [
     "# https://www.kaggle.com/code/xiaxiaxu/predictmachinefailureinadvance/data\n",
-    "sensor = pd.read_csv('sensor.csv')"
+    "sensor = pd.read_csv(\"sensor.csv\")"
    ]
   },
   {
@@ -100,7 +104,7 @@
    "outputs": [],
    "source": [
     "# only keeping cols w high var in pca analysis.\n",
-    "data = sensor[['timestamp', 'sensor_25', 'sensor_11', 'sensor_36', 'sensor_34']]"
+    "data = sensor[[\"timestamp\", \"sensor_25\", \"sensor_11\", \"sensor_36\", \"sensor_34\"]]"
    ]
   },
   {
@@ -120,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['timestamp']= pd.to_datetime(data['timestamp'])\n",
+    "data[\"timestamp\"] = pd.to_datetime(data[\"timestamp\"])\n",
     "print(data.dtypes)"
    ]
   },
@@ -238,8 +242,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sequence_index = 'timestamp'\n",
-    "model = PAR(sequence_index = sequence_index, verbose=True)"
+    "sequence_index = \"timestamp\"\n",
+    "model = PAR(sequence_index=sequence_index, verbose=True)"
    ]
   },
   {
@@ -318,7 +322,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "one_k_rows.set_index('timestamp').plot()"
+    "one_k_rows.set_index(\"timestamp\").plot()"
    ]
   },
   {
@@ -351,7 +355,7 @@
     }
    ],
    "source": [
-    "sample.set_index('timestamp').plot()"
+    "sample.set_index(\"timestamp\").plot()"
    ]
   },
   {
