--- a/notebooks/10-dgan-large-windows.ipynb
+++ b/notebooks/10-dgan-large-windows.ipynb
@@ -51,16 +51,24 @@
     }
    ],
    "source": [
-    "slice0 = pd.read_csv('../data/kagglePump/slice0.csv') \n",
-    "slice1 = pd.read_csv('../data/kagglePump/slice1.csv') \n",
-    "slice2 = pd.read_csv('../data/kagglePump/slice2.csv')\n",
-    "slice3 = pd.read_csv('../data/kagglePump/slice3.csv') \n",
-    "slice4 = pd.read_csv('../data/kagglePump/slice4.csv')\n",
-    "slice5 = pd.read_csv('../data/kagglePump/slice5.csv') \n",
-    "slice6 = pd.read_csv('../data/kagglePump/slice6.csv') \n",
+    "slice0 = pd.read_csv(\"../data/kagglePump/slice0.csv\")\n",
+    "slice1 = pd.read_csv(\"../data/kagglePump/slice1.csv\")\n",
+    "slice2 = pd.read_csv(\"../data/kagglePump/slice2.csv\")\n",
+    "slice3 = pd.read_csv(\"../data/kagglePump/slice3.csv\")\n",
+    "slice4 = pd.read_csv(\"../data/kagglePump/slice4.csv\")\n",
+    "slice5 = pd.read_csv(\"../data/kagglePump/slice5.csv\")\n",
+    "slice6 = pd.read_csv(\"../data/kagglePump/slice6.csv\")\n",
     "\n",
     "\n",
-    "print(slice0.shape, slice1.shape, slice2.shape, slice3.shape, slice4.shape, slice5.shape, slice6.shape)"
+    "print(\n",
+    "    slice0.shape,\n",
+    "    slice1.shape,\n",
+    "    slice2.shape,\n",
+    "    slice3.shape,\n",
+    "    slice4.shape,\n",
+    "    slice5.shape,\n",
+    "    slice6.shape,\n",
+    ")"
    ]
   },
   {
@@ -182,11 +190,11 @@
    "source": [
     "# prep for plotting\n",
     "slices_list = [slice0, slice1, slice2, slice3, slice4, slice5, slice6]\n",
-    "sensor_cols = ['sensor_25', 'sensor_11', 'sensor_36', 'sensor_34']\n",
+    "sensor_cols = [\"sensor_25\", \"sensor_11\", \"sensor_36\", \"sensor_34\"]\n",
     "\n",
     "# cast timestamps to be type datetime\n",
     "for sl in slices_list:\n",
-    "    sl['timestamp']= pd.to_datetime(sl['timestamp'])"
+    "    sl[\"timestamp\"] = pd.to_datetime(sl[\"timestamp\"])"
    ]
   },
   {
@@ -210,18 +218,18 @@
    ],
    "source": [
     "def plot_slice(slice, ind):\n",
-    "    \n",
     "    for i, c in enumerate(sensor_cols):\n",
-    "        plt.plot(slice['timestamp'], slice[c], label=c)\n",
+    "        plt.plot(slice[\"timestamp\"], slice[c], label=c)\n",
     "    ax = plt.gca()\n",
-    "    ax.title.set_text(\"Slice\" +str(ind))\n",
+    "    ax.title.set_text(\"Slice\" + str(ind))\n",
     "    ax.xaxis.set_minor_locator(md.DayLocator(interval=1))\n",
     "    ax.xaxis.set_major_locator(md.DayLocator(interval=1))\n",
     "    ax.xaxis.set_major_formatter(md.DateFormatter(\"%D\"))\n",
-    "    plt.legend(prop={'size': 7})\n",
-    "    \n",
+    "    plt.legend(prop={\"size\": 7})\n",
+    "\n",
+    "\n",
     "# test plotting func\n",
-    "plot_slice(slices_list[0],0)\n",
+    "plot_slice(slices_list[0], 0)\n",
     "plt.show()"
    ]
   },
@@ -248,13 +256,13 @@
     "# lets plot them all\n",
     "\n",
     "figure = plt.figure(figsize=(10, 10))\n",
-    "figure.suptitle(\"Slices Plots from kagglePump\", fontsize=25, fontweight='roman')\n",
+    "figure.suptitle(\"Slices Plots from kagglePump\", fontsize=25, fontweight=\"roman\")\n",
     "\n",
     "for i, sl in enumerate(slices_list):\n",
-    "    figure.add_subplot(3, 3, i+1)\n",
+    "    figure.add_subplot(3, 3, i + 1)\n",
     "    plot_slice(sl, i)\n",
-    "    \n",
-    "plt.show()\n"
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -282,10 +290,11 @@
     "# also dropped the first element from each to make them an even 3600\n",
     "\n",
     "for i in range(len(slices_list)):\n",
-    "    slices_list[i] = slices_list[i].drop(columns=[\"timestamp\",\"machine_status\"]).to_numpy()\n",
+    "    slices_list[i] = (\n",
+    "        slices_list[i].drop(columns=[\"timestamp\", \"machine_status\"]).to_numpy()\n",
+    "    )\n",
     "    slices_list[i] = np.array(slices_list[i][1:])\n",
-    "    print(slices_list[i].shape)\n",
-    "\n"
+    "    print(slices_list[i].shape)"
    ]
   },
   {
@@ -350,7 +359,7 @@
     }
    ],
    "source": [
-    "# we have shape 6,3601, 4. \n",
+    "# we have shape 6,3601, 4.\n",
     "# we want something closer to 300,720,4.\n",
     "# 300 being num training samples, 720 being datapoints per sample (12 hrs), 4 sensor cols.\n",
     "window_shape = (720, 4)\n",
@@ -369,7 +378,7 @@
     "# alright, there we have 50 windows of 12hr data from our first slice.\n",
     "# lets get 50 windows from our other 5 slices\n",
     "\n",
-    "for i in range(1,6):\n",
+    "for i in range(1, 6):\n",
     "    temp_window = view_as_windows(slices_list[i], window_shape, step=58)\n",
     "    temp_window = np.squeeze(temp_window)\n",
     "    windowed_data = np.append(windowed_data, temp_window, axis=0)"
@@ -404,12 +413,11 @@
    "outputs": [],
    "source": [
     "def plot_12hr_slice(slice, ind):\n",
-    "    \n",
     "    for i, c in enumerate(sensor_cols):\n",
-    "        plt.plot(slice[:,i], label=c)\n",
+    "        plt.plot(slice[:, i], label=c)\n",
     "    ax = plt.gca()\n",
-    "    ax.title.set_text(\"Slice\" +str(ind))\n",
-    "    plt.legend(prop={'size': 7})"
+    "    ax.title.set_text(\"Slice\" + str(ind))\n",
+    "    plt.legend(prop={\"size\": 7})"
    ]
   },
   {
@@ -435,14 +443,14 @@
     "# plot random windows\n",
     "\n",
     "figure = plt.figure(figsize=(10, 10))\n",
-    "figure.suptitle(\"Slices 12hr Window plots\", fontsize=25, fontweight='roman')\n",
+    "figure.suptitle(\"Slices 12hr Window plots\", fontsize=25, fontweight=\"roman\")\n",
     "\n",
     "for i in range(9):\n",
-    "    figure.add_subplot(3, 3, i+1)\n",
+    "    figure.add_subplot(3, 3, i + 1)\n",
     "    index = np.random.choice(300)\n",
     "    sl = windowed_data[index]\n",
     "    plot_12hr_slice(sl, index)\n",
-    "    \n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -464,7 +472,7 @@
     }
    ],
    "source": [
-    "# Recommended to train with a GPU \n",
+    "# Recommended to train with a GPU\n",
     "torch.cuda.is_available()"
    ]
   },
@@ -479,14 +487,15 @@
     "\n",
     "config = DGANConfig(\n",
     "    max_sequence_len=windowed_data.shape[1],\n",
-    "    sample_len=20, # trying a larger sample_len\n",
+    "    sample_len=20,  # trying a larger sample_len\n",
     "    batch_size=min(1000, windowed_data.shape[0]),\n",
-    "    apply_feature_scaling=True, \n",
+    "    apply_feature_scaling=True,\n",
     "    apply_example_scaling=False,\n",
     "    use_attribute_discriminator=False,\n",
     "    generator_learning_rate=1e-4,\n",
     "    discriminator_learning_rate=1e-4,\n",
-    "    epochs=10000)\n",
+    "    epochs=10000,\n",
+    ")\n",
     "\n",
     "model = DGAN(config)"
    ]
@@ -10552,7 +10561,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# saving model for future use \n",
+    "# saving model for future use\n",
     "model.save(\"../models/dgan_model_2.pt\")"
    ]
   },
@@ -10590,14 +10599,14 @@
     "# plot random synthetic windows\n",
     "\n",
     "figure = plt.figure(figsize=(10, 10))\n",
-    "figure.suptitle(\"Synthetic 12hr Window plots\", fontsize=25, fontweight='roman')\n",
+    "figure.suptitle(\"Synthetic 12hr Window plots\", fontsize=25, fontweight=\"roman\")\n",
     "\n",
     "for i in range(9):\n",
-    "    figure.add_subplot(3, 3, i+1)\n",
+    "    figure.add_subplot(3, 3, i + 1)\n",
     "    index = np.random.choice(1000)\n",
     "    sl = synthetic_features[index]\n",
     "    plot_12hr_slice(sl, index)\n",
-    "    \n",
+    "\n",
     "plt.show()"
    ]
   },
