--- a/notebooks/12-generate-sensor-data.ipynb
+++ b/notebooks/12-generate-sensor-data.ipynb
@@ -95,7 +95,9 @@
     "model = DGAN(config)\n",
     "\n",
     "# load in our pretrained model parameters\n",
-    "model = model.load(\"models/dgan_model_5_48_sensors.pt\", map_location=torch.device(\"cpu\"))"
+    "model = model.load(\n",
+    "    \"models/dgan_model_5_48_sensors.pt\", map_location=torch.device(\"cpu\")\n",
+    ")"
    ]
   },
   {
@@ -117,8 +119,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# four sensor columns to look at : ) \n",
+    "# four sensor columns to look at : )\n",
     "sensor_cols = [\"sensor_25\", \"sensor_11\", \"sensor_36\", \"sensor_34\"]\n",
+    "\n",
     "\n",
     "# plotting function for a single slice\n",
     "def plot_12hr_slice(slice, ind):\n",
@@ -218,7 +221,7 @@
    "outputs": [],
    "source": [
     "# create initial time\n",
-    "time_0 = np.datetime64('2022-09-01 00:00:00')\n",
+    "time_0 = np.datetime64(\"2022-09-01 00:00:00\")\n",
     "timestamps_array = np.array(time_0)"
    ]
   },
@@ -230,8 +233,8 @@
    "outputs": [],
    "source": [
     "# add 1 minute to initial time array, 719 times\n",
-    "for i in range(1,720):\n",
-    "    new_time = [time_0 + np.timedelta64(i, 'm')]\n",
+    "for i in range(1, 720):\n",
+    "    new_time = [time_0 + np.timedelta64(i, \"m\")]\n",
     "    timestamps_array = np.append(timestamps_array, new_time)"
    ]
   },
@@ -244,8 +247,10 @@
    "source": [
     "print(timestamps_array.shape)  # how many timestamps do we have\n",
     "print(timestamps_array[5:10])  # print 5 example timestamps\n",
-    "timestamps_array = np.datetime_as_string(timestamps_array, unit='m') # convert to string\n",
-    "print(timestamps_array[5:10]) "
+    "timestamps_array = np.datetime_as_string(\n",
+    "    timestamps_array, unit=\"m\"\n",
+    ")  # convert to string\n",
+    "print(timestamps_array[5:10])"
    ]
   },
   {
@@ -256,10 +261,10 @@
    "outputs": [],
    "source": [
     "# add the column to the slice we have\n",
-    "timestamps_array = np.expand_dims(timestamps_array,1)\n",
+    "timestamps_array = np.expand_dims(timestamps_array, 1)\n",
     "print(timestamps_array.shape)\n",
     "print(my_slice.shape)\n",
-    "my_slice = np.concatenate((timestamps_array, my_slice), axis=1, dtype='object')\n",
+    "my_slice = np.concatenate((timestamps_array, my_slice), axis=1, dtype=\"object\")\n",
     "my_slice.shape"
    ]
   },
@@ -280,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "KAFKA_BOOTSTRAP_SERVER = 'kafka-cluster-kafka-bootstrap.edge-kafka.svc.cluster.local'\n",
+    "KAFKA_BOOTSTRAP_SERVER = \"kafka-cluster-kafka-bootstrap.edge-kafka.svc.cluster.local\"\n",
     "\n",
     "KAFKA_SASL_MECHANISM = os.environ.get(\"KAFKA_SASL_MECHANISM\", \"PLAIN\")\n",
     "KAFKA_SECURITY_PROTOCOL = \"PLAINTEXT\"\n",
