--- a/notebooks/13-dgan-casing.ipynb
+++ b/notebooks/13-dgan-casing.ipynb
@@ -119,7 +119,7 @@
     }
    ],
    "source": [
-    "casing = pd.read_csv('../data/gasPump/casing.csv', names=[\"timestamp\",\"pressure\"]) \n",
+    "casing = pd.read_csv(\"../data/gasPump/casing.csv\", names=[\"timestamp\", \"pressure\"])\n",
     "print(len(casing))\n",
     "\n",
     "\n",
@@ -235,7 +235,7 @@
     }
    ],
    "source": [
-    "casing.set_index('timestamp').plot()"
+    "casing.set_index(\"timestamp\").plot()"
    ]
   },
   {
@@ -256,8 +256,8 @@
     }
    ],
    "source": [
-    "# alright we have 353 rows of data over the course of months. \n",
-    "# seems like the timestamps arent uniform distance from each other \n",
+    "# alright we have 353 rows of data over the course of months.\n",
+    "# seems like the timestamps arent uniform distance from each other\n",
     "# which is interesting. shouldnt matter for us I believe.\n",
     "\n",
     "# first dropping timestamp col\n",
@@ -284,9 +284,9 @@
     }
    ],
    "source": [
-    "# lets make some windows \n",
-    "# we really don't have a lot of training data \n",
-    "# so these overlaps will be pretty small. \n",
+    "# lets make some windows\n",
+    "# we really don't have a lot of training data\n",
+    "# so these overlaps will be pretty small.\n",
     "# thinking of length 100 - checking with audrey now.\n",
     "\n",
     "window_shape = (100, 1)\n",
@@ -327,8 +327,8 @@
     "def plot_100_slice(slice, ind):\n",
     "    plt.plot(slice, label=\"pressure\")\n",
     "    ax = plt.gca()\n",
-    "    ax.title.set_text(\"Slice\" +str(ind))\n",
-    "    plt.legend(prop={'size': 9})"
+    "    ax.title.set_text(\"Slice\" + str(ind))\n",
+    "    plt.legend(prop={\"size\": 9})"
    ]
   },
   {
@@ -351,16 +351,15 @@
     }
    ],
    "source": [
-    "\n",
     "figure = plt.figure(figsize=(10, 10))\n",
-    "figure.suptitle(\"Slices 100row Window plots\", fontsize=25, fontweight='roman')\n",
+    "figure.suptitle(\"Slices 100row Window plots\", fontsize=25, fontweight=\"roman\")\n",
     "\n",
     "for i in range(9):\n",
-    "    figure.add_subplot(3, 3, i+1)\n",
+    "    figure.add_subplot(3, 3, i + 1)\n",
     "    index = np.random.choice(51)\n",
     "    sl = windowed_data[index]\n",
     "    plot_100_slice(sl, index)\n",
-    "    \n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -382,7 +381,7 @@
     }
    ],
    "source": [
-    "# Recommended to train with a GPU \n",
+    "# Recommended to train with a GPU\n",
     "torch.cuda.is_available()"
    ]
   },
@@ -397,14 +396,15 @@
     "\n",
     "config = DGANConfig(\n",
     "    max_sequence_len=windowed_data.shape[1],\n",
-    "    sample_len=20, # trying a larger sample_len\n",
+    "    sample_len=20,  # trying a larger sample_len\n",
     "    batch_size=min(1000, windowed_data.shape[0]),\n",
-    "    apply_feature_scaling=True, \n",
+    "    apply_feature_scaling=True,\n",
     "    apply_example_scaling=False,\n",
     "    use_attribute_discriminator=False,\n",
     "    generator_learning_rate=1e-4,\n",
     "    discriminator_learning_rate=1e-4,\n",
-    "    epochs=10000)\n",
+    "    epochs=10000,\n",
+    ")\n",
     "\n",
     "model = DGAN(config)"
    ]
@@ -460,7 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# saving model for future use \n",
+    "# saving model for future use\n",
     "model.save(\"../models/dgan_casing.pt\")"
    ]
   },
@@ -498,14 +498,14 @@
     "# plot random synthetic windows\n",
     "\n",
     "figure = plt.figure(figsize=(10, 10))\n",
-    "figure.suptitle(\"Synthetic 100 row Window plots\", fontsize=25, fontweight='roman')\n",
+    "figure.suptitle(\"Synthetic 100 row Window plots\", fontsize=25, fontweight=\"roman\")\n",
     "\n",
     "for i in range(9):\n",
-    "    figure.add_subplot(3, 3, i+1)\n",
+    "    figure.add_subplot(3, 3, i + 1)\n",
     "    index = np.random.choice(1000)\n",
     "    sl = synthetic_features[index]\n",
     "    plot_100_slice(sl, index)\n",
-    "    \n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -530,10 +530,12 @@
    ],
    "source": [
     "# Compare distribution of pressure values\n",
-    "plt.hist([casing.flatten(), synthetic_features[:,:,0].flatten()], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.hist(\n",
+    "    [casing.flatten(), synthetic_features[:, :, 0].flatten()],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Pressure Values\")\n",
     "plt.ylabel(\"Density\")\n",
