--- a/notebooks/14-casing-tocsv.ipynb
+++ b/notebooks/14-casing-tocsv.ipynb
@@ -106,14 +106,15 @@
     "\n",
     "config = DGANConfig(\n",
     "    max_sequence_len=100,\n",
-    "    sample_len=20, # trying a larger sample_len\n",
+    "    sample_len=20,  # trying a larger sample_len\n",
     "    batch_size=min(1000, 51),\n",
-    "    apply_feature_scaling=True, \n",
+    "    apply_feature_scaling=True,\n",
     "    apply_example_scaling=False,\n",
     "    use_attribute_discriminator=False,\n",
     "    generator_learning_rate=1e-4,\n",
     "    discriminator_learning_rate=1e-4,\n",
-    "    epochs=10000)\n",
+    "    epochs=10000,\n",
+    ")\n",
     "\n",
     "model = DGAN(config)"
    ]
@@ -125,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# loading model for future use \n",
+    "# loading model for future use\n",
     "model = model.load(\"../models/dgan_casing.pt\")"
    ]
   },
@@ -150,8 +151,8 @@
     "def plot_100_slice(slice, ind):\n",
     "    plt.plot(slice, label=\"pressure\")\n",
     "    ax = plt.gca()\n",
-    "    ax.title.set_text(\"Slice\" +str(ind))\n",
-    "    plt.legend(prop={'size': 9})"
+    "    ax.title.set_text(\"Slice\" + str(ind))\n",
+    "    plt.legend(prop={\"size\": 9})"
    ]
   },
   {
@@ -177,14 +178,14 @@
     "# plot random synthetic windows\n",
     "\n",
     "figure = plt.figure(figsize=(10, 10))\n",
-    "figure.suptitle(\"Synthetic 100 row Window plots\", fontsize=25, fontweight='roman')\n",
+    "figure.suptitle(\"Synthetic 100 row Window plots\", fontsize=25, fontweight=\"roman\")\n",
     "\n",
     "for i in range(9):\n",
-    "    figure.add_subplot(3, 3, i+1)\n",
+    "    figure.add_subplot(3, 3, i + 1)\n",
     "    index = np.random.choice(1000)\n",
     "    sl = synthetic_features[index]\n",
     "    plot_100_slice(sl, index)\n",
-    "    \n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -216,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reshaped_data = np.empty((100000,2))"
+    "reshaped_data = np.empty((100000, 2))"
    ]
   },
   {
@@ -226,14 +227,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "init = 0 \n",
+    "init = 0\n",
     "# outer loop around samples\n",
     "for x in range(1000):\n",
     "    # loop of each sample\n",
     "    for y in range(100):\n",
-    "        reshaped_data[init][0] = x+1000\n",
-    "        reshaped_data[init][1] = synthetic_features[x,y,0]\n",
-    "        init+=1"
+    "        reshaped_data[init][0] = x + 1000\n",
+    "        reshaped_data[init][1] = synthetic_features[x, y, 0]\n",
+    "        init += 1"
    ]
   },
   {
@@ -398,7 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reshaped_df.to_csv('../data/gasPump/synthetic_casing.csv',index=None)"
+    "reshaped_df.to_csv(\"../data/gasPump/synthetic_casing.csv\", index=None)"
    ]
   },
   {
