--- a/notebooks/16-preprocess-48-sensors.ipynb
+++ b/notebooks/16-preprocess-48-sensors.ipynb
@@ -31,9 +31,9 @@
     "# Read data, set 'timestamp' values as index\n",
     "# my path is a bit annoying, the data in another repo for me\n",
     "# https://www.kaggle.com/datasets/nphantawee/pump-sensor-data\n",
-    "sensor_path = '~/sensor-failure-predication/synthetic-data-generator/sensor.csv'\n",
+    "sensor_path = \"~/sensor-failure-predication/synthetic-data-generator/sensor.csv\"\n",
     "\n",
-    "df = pd.read_csv(sensor_path, index_col='timestamp', parse_dates=True)\n"
+    "df = pd.read_csv(sensor_path, index_col=\"timestamp\", parse_dates=True)"
    ]
   },
   {
@@ -46,14 +46,14 @@
     "# Column 'machine_status' has word values.\n",
     "# Convert string values in target to numerics.\n",
     "# Notice that 'BROKEN' is mapped to 1\n",
-    "status_values = [(df['machine_status'] == 'NORMAL'),\n",
-    "                 (df['machine_status'] == 'BROKEN'),\n",
-    "                 (df['machine_status'] == 'RECOVERING')]\n",
+    "status_values = [\n",
+    "    (df[\"machine_status\"] == \"NORMAL\"),\n",
+    "    (df[\"machine_status\"] == \"BROKEN\"),\n",
+    "    (df[\"machine_status\"] == \"RECOVERING\"),\n",
+    "]\n",
     "\n",
     "numeric_status_values = [0, 1, 0.5]\n",
-    "df['machine_status'] = np.select(status_values,\n",
-    "                                 numeric_status_values,\n",
-    "                                 default=0)"
+    "df[\"machine_status\"] = np.select(status_values, numeric_status_values, default=0)"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "# Get failure times\n",
-    "failure_times = df[df['machine_status'] == 1].index"
+    "failure_times = df[df[\"machine_status\"] == 1].index"
    ]
   },
   {
@@ -76,8 +76,9 @@
    "source": [
     "# Write the data slices to csv files\n",
     "for i, failure_time in enumerate(failure_times):\n",
-    "    df.loc[(failure_time - pd.Timedelta(seconds=60*60*12*3)) : failure_time, :].\\\n",
-    "        to_csv('../data/kagglePump/full_slice'+str(i)+'.csv')"
+    "    df.loc[\n",
+    "        (failure_time - pd.Timedelta(seconds=60 * 60 * 12 * 3)) : failure_time, :\n",
+    "    ].to_csv(\"../data/kagglePump/full_slice\" + str(i) + \".csv\")"
    ]
   },
   {
