--- a/notebooks/17-12hr-fulldata-model.ipynb
+++ b/notebooks/17-12hr-fulldata-model.ipynb
@@ -108,16 +108,24 @@
     }
    ],
    "source": [
-    "slice0 = pd.read_csv('../data/kagglePump/full_slice0.csv') \n",
-    "slice1 = pd.read_csv('../data/kagglePump/full_slice1.csv') \n",
-    "slice2 = pd.read_csv('../data/kagglePump/full_slice2.csv')\n",
-    "slice3 = pd.read_csv('../data/kagglePump/full_slice3.csv') \n",
-    "slice4 = pd.read_csv('../data/kagglePump/full_slice4.csv')\n",
-    "slice5 = pd.read_csv('../data/kagglePump/full_slice5.csv') \n",
-    "slice6 = pd.read_csv('../data/kagglePump/full_slice6.csv') \n",
+    "slice0 = pd.read_csv(\"../data/kagglePump/full_slice0.csv\")\n",
+    "slice1 = pd.read_csv(\"../data/kagglePump/full_slice1.csv\")\n",
+    "slice2 = pd.read_csv(\"../data/kagglePump/full_slice2.csv\")\n",
+    "slice3 = pd.read_csv(\"../data/kagglePump/full_slice3.csv\")\n",
+    "slice4 = pd.read_csv(\"../data/kagglePump/full_slice4.csv\")\n",
+    "slice5 = pd.read_csv(\"../data/kagglePump/full_slice5.csv\")\n",
+    "slice6 = pd.read_csv(\"../data/kagglePump/full_slice6.csv\")\n",
     "\n",
     "\n",
-    "print(slice0.shape, slice1.shape, slice2.shape, slice3.shape, slice4.shape, slice5.shape, slice6.shape)"
+    "print(\n",
+    "    slice0.shape,\n",
+    "    slice1.shape,\n",
+    "    slice2.shape,\n",
+    "    slice3.shape,\n",
+    "    slice4.shape,\n",
+    "    slice5.shape,\n",
+    "    slice6.shape,\n",
+    ")"
    ]
   },
   {
@@ -160,22 +168,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "COLS_TO_DROP = ['Unnamed: 0','sensor_00', 'sensor_15', \n",
-    "                'sensor_50', 'sensor_51']\n",
-    "cleanup_nums = {\"machine_status\": {\"NORMAL\": 0,\n",
-    "                                   \"BROKEN\": 1,\n",
-    "                                   \"RECOVERING\":2}}\n",
+    "COLS_TO_DROP = [\"Unnamed: 0\", \"sensor_00\", \"sensor_15\", \"sensor_50\", \"sensor_51\"]\n",
+    "cleanup_nums = {\"machine_status\": {\"NORMAL\": 0, \"BROKEN\": 1, \"RECOVERING\": 2}}\n",
     "\n",
     "for sl in slices_list:\n",
-    "    sl['timestamp']= pd.to_datetime(sl['timestamp']) # cast to datatype\n",
-    "    sl = sl.drop(COLS_TO_DROP,axis=1, inplace=True) # drop cols\n",
+    "    sl[\"timestamp\"] = pd.to_datetime(sl[\"timestamp\"])  # cast to datatype\n",
+    "    sl = sl.drop(COLS_TO_DROP, axis=1, inplace=True)  # drop cols\n",
     "\n",
     "for sl in slices_list:\n",
     "    sl = sl.replace(cleanup_nums)\n",
     "\n",
     "for sl in slices_list:\n",
-    "    sl = sl.dropna(axis=0, inplace=True) # drop nans\n",
-    "    "
+    "    sl = sl.dropna(axis=0, inplace=True)  # drop nans"
    ]
   },
   {
@@ -193,7 +197,15 @@
     }
    ],
    "source": [
-    "print(slice0.shape, slice1.shape, slice2.shape, slice3.shape, slice4.shape, slice5.shape, slice6.shape)"
+    "print(\n",
+    "    slice0.shape,\n",
+    "    slice1.shape,\n",
+    "    slice2.shape,\n",
+    "    slice3.shape,\n",
+    "    slice4.shape,\n",
+    "    slice5.shape,\n",
+    "    slice6.shape,\n",
+    ")"
    ]
   },
   {
@@ -206,14 +218,14 @@
     "# these plots are absurd in size but lets do it anyways\n",
     "def plot_slice(one_slice):\n",
     "    # subplot matrix\n",
-    "    fig, axes = plt.subplots(10, 5, figsize=(20,20))\n",
+    "    fig, axes = plt.subplots(10, 5, figsize=(20, 20))\n",
     "    fig.tight_layout()\n",
     "\n",
     "    for col, ax in zip(one_slice.columns[1:-1], axes.flat):\n",
     "        one_slice[col].plot.line(ax=ax)\n",
     "        ax.set_title(col)\n",
     "    # disable leftover axes\n",
-    "    for ax in axes.flat[one_slice.columns[1:-1].size:]:\n",
+    "    for ax in axes.flat[one_slice.columns[1:-1].size :]:\n",
     "        ax.set_axis_off()"
    ]
   },
@@ -260,7 +272,7 @@
     "for i in range(len(slices_list)):\n",
     "    slices_list[i] = slices_list[i].drop(columns=[\"timestamp\"]).to_numpy()\n",
     "    slices_list[i] = np.array(slices_list[i][1:])\n",
-    "    print(slices_list[i].shape)\n"
+    "    print(slices_list[i].shape)"
    ]
   },
   {
@@ -312,7 +324,7 @@
     }
    ],
    "source": [
-    "# we have shape 6,2160, 49 with machine status. \n",
+    "# we have shape 6,2160, 49 with machine status.\n",
     "# we want something closer to 300,720,4.\n",
     "# 300 being num training samples, 720 being datapoints per sample (12 hrs), 4 sensor cols.\n",
     "window_shape = (720, 49)\n",
@@ -328,7 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(1,6):\n",
+    "for i in range(1, 6):\n",
     "    temp_window = view_as_windows(slices_list[i], window_shape, step=36)\n",
     "    temp_window = np.squeeze(temp_window)\n",
     "    windowed_data = np.append(windowed_data, temp_window, axis=0)"
@@ -345,14 +357,15 @@
     "\n",
     "config = DGANConfig(\n",
     "    max_sequence_len=windowed_data.shape[1],\n",
-    "    sample_len=20, # trying a larger sample_len\n",
+    "    sample_len=20,  # trying a larger sample_len\n",
     "    batch_size=min(1000, windowed_data.shape[0]),\n",
-    "    apply_feature_scaling=True, \n",
+    "    apply_feature_scaling=True,\n",
     "    apply_example_scaling=False,\n",
     "    use_attribute_discriminator=False,\n",
     "    generator_learning_rate=1e-4,\n",
     "    discriminator_learning_rate=1e-4,\n",
-    "    epochs=10000)\n",
+    "    epochs=10000,\n",
+    ")\n",
     "\n",
     "model = DGAN(config)"
    ]
@@ -375,7 +388,7 @@
     }
    ],
    "source": [
-    "# Recommended to train with a GPU \n",
+    "# Recommended to train with a GPU\n",
     "torch.cuda.is_available()"
    ]
   },
@@ -10397,11 +10410,11 @@
    "source": [
     "start = time.time()\n",
     "model.train_numpy(\n",
-    "    windowed_data, \n",
-    "    feature_types=[OutputType.CONTINUOUS] * (windowed_data.shape[2]-1) + [OutputType.DISCRETE]\n",
-    "\n",
+    "    windowed_data,\n",
+    "    feature_types=[OutputType.CONTINUOUS] * (windowed_data.shape[2] - 1)\n",
+    "    + [OutputType.DISCRETE],\n",
     ")\n",
-    "stop = time.time()\n"
+    "stop = time.time()"
    ]
   },
   {
@@ -10429,7 +10442,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# saving model for future use \n",
+    "# saving model for future use\n",
     "model.save(\"../models/dgan_model_5_48_sensors.pt\")"
    ]
   },
@@ -10494,7 +10507,9 @@
     }
    ],
    "source": [
-    "synthetic_df = pd.DataFrame(synthetic_features.reshape(-1, synthetic_features.shape[2]), columns=sensor_cols)\n",
+    "synthetic_df = pd.DataFrame(\n",
+    "    synthetic_features.reshape(-1, synthetic_features.shape[2]), columns=sensor_cols\n",
+    ")\n",
     "synthetic_df.shape"
    ]
   },
@@ -10518,9 +10533,9 @@
     }
    ],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(1,2, figsize=(13,5))\n",
-    "sns.heatmap(slice2.corr(),cmap='Greens',ax=ax1)\n",
-    "sns.heatmap(synthetic_df.corr(),cmap='Blues',ax=ax2)\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(13, 5))\n",
+    "sns.heatmap(slice2.corr(), cmap=\"Greens\", ax=ax1)\n",
+    "sns.heatmap(synthetic_df.corr(), cmap=\"Blues\", ax=ax2)\n",
     "plt.show()"
    ]
   },
