--- a/notebooks/18-test-12hr-48sensor.ipynb
+++ b/notebooks/18-test-12hr-48sensor.ipynb
@@ -173,16 +173,24 @@
     }
    ],
    "source": [
-    "slice0 = pd.read_csv('../data/kagglePump/full_slice0.csv') \n",
-    "slice1 = pd.read_csv('../data/kagglePump/full_slice1.csv') \n",
-    "slice2 = pd.read_csv('../data/kagglePump/full_slice2.csv')\n",
-    "slice3 = pd.read_csv('../data/kagglePump/full_slice3.csv') \n",
-    "slice4 = pd.read_csv('../data/kagglePump/full_slice4.csv')\n",
-    "slice5 = pd.read_csv('../data/kagglePump/full_slice5.csv') \n",
-    "slice6 = pd.read_csv('../data/kagglePump/full_slice6.csv') \n",
+    "slice0 = pd.read_csv(\"../data/kagglePump/full_slice0.csv\")\n",
+    "slice1 = pd.read_csv(\"../data/kagglePump/full_slice1.csv\")\n",
+    "slice2 = pd.read_csv(\"../data/kagglePump/full_slice2.csv\")\n",
+    "slice3 = pd.read_csv(\"../data/kagglePump/full_slice3.csv\")\n",
+    "slice4 = pd.read_csv(\"../data/kagglePump/full_slice4.csv\")\n",
+    "slice5 = pd.read_csv(\"../data/kagglePump/full_slice5.csv\")\n",
+    "slice6 = pd.read_csv(\"../data/kagglePump/full_slice6.csv\")\n",
     "\n",
     "\n",
-    "print(slice0.shape, slice1.shape, slice2.shape, slice3.shape, slice4.shape, slice5.shape, slice6.shape)"
+    "print(\n",
+    "    slice0.shape,\n",
+    "    slice1.shape,\n",
+    "    slice2.shape,\n",
+    "    slice3.shape,\n",
+    "    slice4.shape,\n",
+    "    slice5.shape,\n",
+    "    slice6.shape,\n",
+    ")"
    ]
   },
   {
@@ -217,22 +225,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "COLS_TO_DROP = ['Unnamed: 0','sensor_00', 'sensor_15', \n",
-    "                'sensor_50', 'sensor_51']\n",
-    "cleanup_nums = {\"machine_status\": {\"NORMAL\": 0,\n",
-    "                                   \"BROKEN\": 1,\n",
-    "                                   \"RECOVERING\":2}}\n",
+    "COLS_TO_DROP = [\"Unnamed: 0\", \"sensor_00\", \"sensor_15\", \"sensor_50\", \"sensor_51\"]\n",
+    "cleanup_nums = {\"machine_status\": {\"NORMAL\": 0, \"BROKEN\": 1, \"RECOVERING\": 2}}\n",
     "\n",
     "for sl in slices_list:\n",
-    "    sl['timestamp']= pd.to_datetime(sl['timestamp']) # cast to datatype\n",
-    "    sl = sl.drop(COLS_TO_DROP,axis=1, inplace=True) # drop cols\n",
+    "    sl[\"timestamp\"] = pd.to_datetime(sl[\"timestamp\"])  # cast to datatype\n",
+    "    sl = sl.drop(COLS_TO_DROP, axis=1, inplace=True)  # drop cols\n",
     "\n",
     "for sl in slices_list:\n",
     "    sl = sl.replace(cleanup_nums)\n",
     "\n",
     "for sl in slices_list:\n",
-    "    sl = sl.dropna(axis=0, inplace=True) # drop nans\n",
-    "    "
+    "    sl = sl.dropna(axis=0, inplace=True)  # drop nans"
    ]
   },
   {
@@ -245,14 +249,14 @@
     "# these plots are absurd in size but lets do it anyways\n",
     "def plot_slice(one_slice):\n",
     "    # subplot matrix\n",
-    "    fig, axes = plt.subplots(10, 5, figsize=(20,20))\n",
+    "    fig, axes = plt.subplots(10, 5, figsize=(20, 20))\n",
     "    fig.tight_layout()\n",
     "\n",
     "    for col, ax in zip(one_slice.columns[1:-1], axes.flat):\n",
     "        one_slice[col].plot.line(ax=ax)\n",
     "        ax.set_title(col)\n",
     "    # disable leftover axes\n",
-    "    for ax in axes.flat[one_slice.columns[1:-1].size:]:\n",
+    "    for ax in axes.flat[one_slice.columns[1:-1].size :]:\n",
     "        ax.set_axis_off()"
    ]
   },
@@ -302,7 +306,7 @@
     "for i in range(len(slices_list)):\n",
     "    slices_list[i] = slices_list[i].drop(columns=[\"timestamp\"]).to_numpy()\n",
     "    slices_list[i] = np.array(slices_list[i][1:])\n",
-    "    print(slices_list[i].shape)\n"
+    "    print(slices_list[i].shape)"
    ]
   },
   {
@@ -346,19 +350,22 @@
     "# set up DGAN config.\n",
     "\n",
     "config = DGANConfig(\n",
-    "    max_sequence_len=720, # hard coded from prev shape\n",
-    "    sample_len=20, # trying a larger sample_len\n",
+    "    max_sequence_len=720,  # hard coded from prev shape\n",
+    "    sample_len=20,  # trying a larger sample_len\n",
     "    batch_size=min(1000, 300),\n",
-    "    apply_feature_scaling=True, \n",
+    "    apply_feature_scaling=True,\n",
     "    apply_example_scaling=False,\n",
     "    use_attribute_discriminator=False,\n",
     "    generator_learning_rate=1e-4,\n",
     "    discriminator_learning_rate=1e-4,\n",
-    "    epochs=10000)\n",
+    "    epochs=10000,\n",
+    ")\n",
     "\n",
     "model = DGAN(config)\n",
     "\n",
-    "model = model.load(\"../models/dgan_model_4_48_sensors.pt\", map_location=torch.device('cpu'))"
+    "model = model.load(\n",
+    "    \"../models/dgan_model_4_48_sensors.pt\", map_location=torch.device(\"cpu\")\n",
+    ")"
    ]
   }
  ],
