--- a/notebooks/2-test-pivoted-model.ipynb
+++ b/notebooks/2-test-pivoted-model.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loaded = PAR.load('melted_model.pkl')"
+    "loaded = PAR.load(\"melted_model.pkl\")"
    ]
   },
   {
@@ -259,9 +259,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample.sort_values(by='timestamp',inplace=True)\n",
+    "sample.sort_values(by=\"timestamp\", inplace=True)\n",
     "sample.reset_index(inplace=True)\n",
-    "sample = sample.drop('index', 1)"
+    "sample = sample.drop(\"index\", 1)"
    ]
   },
   {
