--- a/notebooks/4-single-model-test.ipynb
+++ b/notebooks/4-single-model-test.ipynb
@@ -22,7 +22,7 @@
     "from sdv.timeseries import PAR\n",
     "import pandas as pd\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from pickle import dump, load "
+    "from pickle import dump, load"
    ]
   },
   {
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loaded = PAR.load('25_model.pkl')"
+    "loaded = PAR.load(\"25_model.pkl\")"
    ]
   },
   {
@@ -104,7 +104,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "sample.set_index('timestamp').plot()"
+    "sample.set_index(\"timestamp\").plot()"
    ]
   }
  ],
