--- a/notebooks/5-sdv-full-data-attempt2.ipynb
+++ b/notebooks/5-sdv-full-data-attempt2.ipynb
@@ -34,10 +34,12 @@
    "outputs": [],
    "source": [
     "# https://www.kaggle.com/code/xiaxiaxu/predictmachinefailureinadvance/data\n",
-    "sensor = pd.read_csv('sensor.csv') \n",
+    "sensor = pd.read_csv(\"sensor.csv\")\n",
     "\n",
     "# only keeping cols w high var in pca analysis + machine status\n",
-    "data = sensor[['timestamp', 'sensor_25', 'sensor_11', 'sensor_36', 'sensor_34', 'machine_status']]"
+    "data = sensor[\n",
+    "    [\"timestamp\", \"sensor_25\", \"sensor_11\", \"sensor_36\", \"sensor_34\", \"machine_status\"]\n",
+    "]"
    ]
   },
   {
@@ -87,8 +89,8 @@
     "# okay, what can our machine status be?\n",
     "\n",
     "# data = data.convert_dtypes()\n",
-    "print(data.dtypes, '\\n')\n",
-    "data['timestamp']= pd.to_datetime(data['timestamp'])\n",
+    "print(data.dtypes, \"\\n\")\n",
+    "data[\"timestamp\"] = pd.to_datetime(data[\"timestamp\"])\n",
     "\n",
     "data.machine_status.unique()"
    ]
@@ -222,7 +224,7 @@
     }
    ],
    "source": [
-    "data.loc[data['machine_status'] == 'BROKEN']"
+    "data.loc[data[\"machine_status\"] == \"BROKEN\"]"
    ]
   },
   {
@@ -315,13 +317,15 @@
     }
    ],
    "source": [
-    "scaler = MinMaxScaler((-1,1))\n",
-    "sensor_cols = ['sensor_25', 'sensor_11', 'sensor_36', 'sensor_34']\n",
+    "scaler = MinMaxScaler((-1, 1))\n",
+    "sensor_cols = [\"sensor_25\", \"sensor_11\", \"sensor_36\", \"sensor_34\"]\n",
     "\n",
     "# scaling our data, then saving our scaler object for future use.\n",
-    "data_around_failures[sensor_cols] = scaler.fit_transform(data_around_failures[sensor_cols])\n",
+    "data_around_failures[sensor_cols] = scaler.fit_transform(\n",
+    "    data_around_failures[sensor_cols]\n",
+    ")\n",
     "\n",
-    "dump(scaler, open('scaler_2.pkl', 'wb'))"
+    "dump(scaler, open(\"scaler_2.pkl\", \"wb\"))"
    ]
   },
   {
@@ -664,7 +668,7 @@
    "source": [
     "# thin_data = thin_data.convert_dtypes()\n",
     "\n",
-    "print(thin_data.dtypes, '\\n')"
+    "print(thin_data.dtypes, \"\\n\")"
    ]
   },
   {
@@ -674,7 +678,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sequence_index = 'timestamp'\n",
+    "sequence_index = \"timestamp\"\n",
     "# context_columns = ['machine_status']\n",
     "context_columns = None"
    ]
@@ -701,7 +705,12 @@
     }
    ],
    "source": [
-    "model = PAR(sequence_index = sequence_index, context_columns=context_columns, verbose=True, epochs=256)\n",
+    "model = PAR(\n",
+    "    sequence_index=sequence_index,\n",
+    "    context_columns=context_columns,\n",
+    "    verbose=True,\n",
+    "    epochs=256,\n",
+    ")\n",
     "model.fit(thin_data)"
    ]
   },
@@ -712,7 +721,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save('model_att_2.pkl')"
+    "model.save(\"model_att_2.pkl\")"
    ]
   },
   {
@@ -766,7 +775,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "thin_data.set_index('timestamp').plot()"
+    "thin_data.set_index(\"timestamp\").plot()"
    ]
   },
   {
@@ -799,7 +808,7 @@
     }
    ],
    "source": [
-    "sample.set_index('timestamp').plot()"
+    "sample.set_index(\"timestamp\").plot()"
    ]
   },
   {
