--- a/notebooks/6-ctgan-testing.ipynb
+++ b/notebooks/6-ctgan-testing.ipynb
@@ -35,10 +35,12 @@
    "outputs": [],
    "source": [
     "# https://www.kaggle.com/code/xiaxiaxu/predictmachinefailureinadvance/data\n",
-    "sensor = pd.read_csv('sensor.csv') \n",
+    "sensor = pd.read_csv(\"sensor.csv\")\n",
     "\n",
     "# only keeping cols w high var in pca analysis + machine status\n",
-    "data = sensor[['timestamp', 'sensor_25', 'sensor_11', 'sensor_36', 'sensor_34', 'machine_status']]"
+    "data = sensor[\n",
+    "    [\"timestamp\", \"sensor_25\", \"sensor_11\", \"sensor_36\", \"sensor_34\", \"machine_status\"]\n",
+    "]"
    ]
   },
   {
@@ -88,9 +90,9 @@
     "# okay, what can our machine status be?\n",
     "\n",
     "# data = data.convert_dtypes()\n",
-    "print(data.dtypes, '\\n')\n",
+    "print(data.dtypes, \"\\n\")\n",
     "# i have no idea why i have to run this line twice for it to work.\n",
-    "data['timestamp']= pd.to_datetime(data['timestamp'])\n",
+    "data[\"timestamp\"] = pd.to_datetime(data[\"timestamp\"])\n",
     "\n",
     "data.machine_status.unique()"
    ]
@@ -142,9 +144,9 @@
     "# okay, what can our machine status be?\n",
     "\n",
     "# data = data.convert_dtypes()\n",
-    "print(data.dtypes, '\\n')\n",
+    "print(data.dtypes, \"\\n\")\n",
     "# i have no idea why i have to run this line twice for it to work.\n",
-    "data['timestamp']= pd.to_datetime(data['timestamp'])\n",
+    "data[\"timestamp\"] = pd.to_datetime(data[\"timestamp\"])\n",
     "\n",
     "data.machine_status.unique()"
    ]
@@ -239,13 +241,15 @@
     }
    ],
    "source": [
-    "scaler = MinMaxScaler((0,1))\n",
-    "sensor_cols = ['sensor_25', 'sensor_11', 'sensor_36', 'sensor_34']\n",
+    "scaler = MinMaxScaler((0, 1))\n",
+    "sensor_cols = [\"sensor_25\", \"sensor_11\", \"sensor_36\", \"sensor_34\"]\n",
     "\n",
     "# scaling our data, then saving our scaler object for future use.\n",
-    "data_around_failures[sensor_cols] = scaler.fit_transform(data_around_failures[sensor_cols])\n",
+    "data_around_failures[sensor_cols] = scaler.fit_transform(\n",
+    "    data_around_failures[sensor_cols]\n",
+    ")\n",
     "\n",
-    "dump(scaler, open('ctgan_0_scaler.pkl', 'wb'))"
+    "dump(scaler, open(\"ctgan_0_scaler.pkl\", \"wb\"))"
    ]
   },
   {
@@ -588,7 +592,7 @@
    "source": [
     "# thin_data = thin_data.convert_dtypes()\n",
     "\n",
-    "print(thin_data.dtypes, '\\n')"
+    "print(thin_data.dtypes, \"\\n\")"
    ]
   },
   {
@@ -598,12 +602,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = CTGAN(verbose=True,\n",
-    "              epochs=500,\n",
-    "              batch_size=300,\n",
-    "              log_frequency=False,\n",
-    "              embedding_dim=256,\n",
-    "              discriminator_steps=3)\n",
+    "model = CTGAN(\n",
+    "    verbose=True,\n",
+    "    epochs=500,\n",
+    "    batch_size=300,\n",
+    "    log_frequency=False,\n",
+    "    embedding_dim=256,\n",
+    "    discriminator_steps=3,\n",
+    ")\n",
     "import time"
    ]
   },
@@ -1192,7 +1198,7 @@
    ],
    "source": [
     "print(f\"Trained in {toc - tic:0.4f} seconds\")\n",
-    "model.save('ctgan_model_new_params.pkl')"
+    "model.save(\"ctgan_model_new_params.pkl\")"
    ]
   },
   {
@@ -1381,7 +1387,7 @@
     }
    ],
    "source": [
-    "new_data = new_data.sort_values(by=['timestamp'])\n",
+    "new_data = new_data.sort_values(by=[\"timestamp\"])\n",
     "new_data"
    ]
   },
@@ -1428,10 +1434,11 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "# y='sensor_11'\n",
     "# thin_data.plot(y='sensor_11')\n",
-    "thin_data.set_index('timestamp').plot(y='sensor_34')\n",
-    "thin_data.set_index('timestamp').plot()"
+    "thin_data.set_index(\"timestamp\").plot(y=\"sensor_34\")\n",
+    "thin_data.set_index(\"timestamp\").plot()"
    ]
   },
   {
@@ -1476,8 +1483,8 @@
     }
    ],
    "source": [
-    "new_data.set_index('timestamp').plot(y='sensor_34')\n",
-    "new_data.set_index('timestamp').plot()\n",
+    "new_data.set_index(\"timestamp\").plot(y=\"sensor_34\")\n",
+    "new_data.set_index(\"timestamp\").plot()\n",
     "# new_data.plot(y='sensor_11')"
    ]
   },
@@ -1508,8 +1515,8 @@
     }
    ],
    "source": [
-    "dups_time = new_data.pivot_table(columns=['timestamp'], aggfunc='size')\n",
-    "print (dups_time.sort_values())"
+    "dups_time = new_data.pivot_table(columns=[\"timestamp\"], aggfunc=\"size\")\n",
+    "print(dups_time.sort_values())"
    ]
   },
   {
@@ -1663,7 +1670,7 @@
     }
    ],
    "source": [
-    "no_dups = new_data.groupby('timestamp').mean().reset_index()\n",
+    "no_dups = new_data.groupby(\"timestamp\").mean().reset_index()\n",
     "no_dups"
    ]
   },
@@ -1709,8 +1716,8 @@
     }
    ],
    "source": [
-    "new_data.set_index('timestamp').plot(y='sensor_34')\n",
-    "new_data.set_index('timestamp').plot()\n"
+    "new_data.set_index(\"timestamp\").plot(y=\"sensor_34\")\n",
+    "new_data.set_index(\"timestamp\").plot()"
    ]
   },
   {
