--- a/notebooks/7-dgan-att0.ipynb
+++ b/notebooks/7-dgan-att0.ipynb
@@ -297,13 +297,13 @@
    ],
    "source": [
     "# https://www.kaggle.com/code/xiaxiaxu/predictmachinefailureinadvance/data\n",
-    "sensor = pd.read_csv('sensor.csv') \n",
+    "sensor = pd.read_csv(\"sensor.csv\")\n",
     "\n",
     "# data columns\n",
-    "COLS = ['sensor_25', 'sensor_11', 'sensor_36', 'sensor_34', 'machine_status']\n",
+    "COLS = [\"sensor_25\", \"sensor_11\", \"sensor_36\", \"sensor_34\", \"machine_status\"]\n",
     "\n",
     "# only keeping cols w high var in pca analysis + machine status\n",
-    "data = sensor[['timestamp'] + COLS]\n",
+    "data = sensor[[\"timestamp\"] + COLS]\n",
     "data"
    ]
   },
@@ -343,9 +343,9 @@
    "source": [
     "# lets convert our datatypes to the correct ones\n",
     "\n",
-    "print(data.dtypes, '\\n')\n",
+    "print(data.dtypes, \"\\n\")\n",
     "# i have no idea why i have to run this line twice for it to work.\n",
-    "data['timestamp']= pd.to_datetime(data['timestamp'])\n"
+    "data[\"timestamp\"] = pd.to_datetime(data[\"timestamp\"])"
    ]
   },
   {
@@ -395,9 +395,9 @@
     "# okay, what can our machine status be?\n",
     "\n",
     "# data = data.convert_dtypes()\n",
-    "print(data.dtypes, '\\n')\n",
+    "print(data.dtypes, \"\\n\")\n",
     "# i have no idea why i have to run this line twice for it to work.\n",
-    "data['timestamp']= pd.to_datetime(data['timestamp'])\n",
+    "data[\"timestamp\"] = pd.to_datetime(data[\"timestamp\"])\n",
     "\n",
     "data.machine_status.unique()"
    ]
@@ -422,13 +422,13 @@
     }
    ],
    "source": [
-    "# Plot the 4 sensors \n",
+    "# Plot the 4 sensors\n",
     "\n",
     "for c in COLS:\n",
-    "    if c == 'machine_status':\n",
+    "    if c == \"machine_status\":\n",
     "        continue\n",
     "    plt.plot(data[\"timestamp\"], data[c], label=c)\n",
-    "    \n",
+    "\n",
     "plt.xticks(rotation=90)\n",
     "plt.legend()\n",
     "plt.ylabel(\"Sensor Value\")\n",
@@ -482,7 +482,7 @@
     }
    ],
    "source": [
-    "# lets drop them : ) \n",
+    "# lets drop them : )\n",
     "\n",
     "data.dropna(axis=0, inplace=True)\n",
     "\n",
@@ -699,14 +699,13 @@
     }
    ],
    "source": [
-    "# Plot the 4 sensors \n",
+    "# Plot the 4 sensors\n",
     "\n",
     "for c in COLS:\n",
-    "    if c == 'machine_status':\n",
+    "    if c == \"machine_status\":\n",
     "        continue\n",
-    "    plt.plot(data_around_failures[\"timestamp\"],\n",
-    "             data_around_failures[c], label=c)\n",
-    "    \n",
+    "    plt.plot(data_around_failures[\"timestamp\"], data_around_failures[c], label=c)\n",
+    "\n",
     "plt.xticks(rotation=90)\n",
     "plt.legend()\n",
     "plt.ylabel(\"Sensor Value\")\n",
@@ -742,13 +741,15 @@
    "source": [
     "# let's now scale our data between 0-1\n",
     "\n",
-    "scaler = MinMaxScaler((0,1))\n",
-    "sensor_cols = ['sensor_25', 'sensor_11', 'sensor_36', 'sensor_34']\n",
+    "scaler = MinMaxScaler((0, 1))\n",
+    "sensor_cols = [\"sensor_25\", \"sensor_11\", \"sensor_36\", \"sensor_34\"]\n",
     "\n",
     "# scaling our data, then saving our scaler object for future use.\n",
-    "data_around_failures[sensor_cols] = scaler.fit_transform(data_around_failures[sensor_cols])\n",
+    "data_around_failures[sensor_cols] = scaler.fit_transform(\n",
+    "    data_around_failures[sensor_cols]\n",
+    ")\n",
     "\n",
-    "dump(scaler, open('dGAN_scaler.pkl', 'wb'))"
+    "dump(scaler, open(\"dGAN_scaler.pkl\", \"wb\"))"
    ]
   },
   {
@@ -771,14 +772,13 @@
     }
    ],
    "source": [
-    "# Plot the 4 scaled sensors \n",
+    "# Plot the 4 scaled sensors\n",
     "\n",
     "for c in COLS:\n",
-    "    if c == 'machine_status':\n",
+    "    if c == \"machine_status\":\n",
     "        continue\n",
-    "    plt.plot(data_around_failures[\"timestamp\"],\n",
-    "             data_around_failures[c], label=c)\n",
-    "    \n",
+    "    plt.plot(data_around_failures[\"timestamp\"], data_around_failures[c], label=c)\n",
+    "\n",
     "plt.xticks(rotation=90)\n",
     "plt.legend()\n",
     "plt.ylabel(\"Sensor Value\")\n",
@@ -925,9 +925,9 @@
     }
    ],
    "source": [
-    "# sanity check - let's unscale the data and replot \n",
+    "# sanity check - let's unscale the data and replot\n",
     "\n",
-    "sc = load(open('dGAN_scaler.pkl', 'rb'))\n",
+    "sc = load(open(\"dGAN_scaler.pkl\", \"rb\"))\n",
     "\n",
     "unscaled_data = sc.inverse_transform(data_around_failures[sensor_cols])\n",
     "\n",
@@ -956,11 +956,10 @@
    ],
    "source": [
     "for c in COLS:\n",
-    "    if c == 'machine_status':\n",
+    "    if c == \"machine_status\":\n",
     "        continue\n",
-    "    plt.plot(data_around_failures[\"timestamp\"],\n",
-    "             unscaled_data_df[c], label=c)\n",
-    "    \n",
+    "    plt.plot(data_around_failures[\"timestamp\"], unscaled_data_df[c], label=c)\n",
+    "\n",
     "plt.xticks(rotation=90)\n",
     "plt.legend()\n",
     "plt.ylabel(\"Sensor Value\")\n",
@@ -1000,7 +999,7 @@
    ],
    "source": [
     "# dropping timestamp col\n",
-    "features = data_around_failures.drop(columns=[\"timestamp\",\"machine_status\"]).to_numpy()\n",
+    "features = data_around_failures.drop(columns=[\"timestamp\", \"machine_status\"]).to_numpy()\n",
     "print(features.shape)\n",
     "\n",
     "# number of samples to split into\n",
@@ -1008,7 +1007,7 @@
     "print(n)\n",
     "\n",
     "# reshape the data accordingly\n",
-    "features = features[:(n*120),:].reshape(-1, 120, features.shape[1])\n",
+    "features = features[: (n * 120), :].reshape(-1, 120, features.shape[1])\n",
     "# Shape is now (# examples, # time points, # features)\n",
     "print(features.shape)"
    ]
@@ -1061,20 +1060,22 @@
     "# note x-axis isnt accurate in these plots.\n",
     "xaxis_2hr = data_around_failures[\"timestamp\"][0:120]\n",
     "\n",
+    "\n",
     "def plot_hours(f):\n",
     "    for i, c in enumerate(sensor_cols):\n",
-    "        plt.plot(xaxis_2hr, f[:,i], label=c)\n",
+    "        plt.plot(xaxis_2hr, f[:, i], label=c)\n",
     "    ax = plt.gca()\n",
-    "    ax.xaxis.set_major_locator(md.HourLocator(byhour=range(2,24,3)))\n",
+    "    ax.xaxis.set_major_locator(md.HourLocator(byhour=range(2, 24, 3)))\n",
     "    ax.xaxis.set_major_formatter(md.DateFormatter(\"%H:%M\"))\n",
     "    plt.legend()\n",
     "    plt.xlabel(\"Time\")\n",
     "    plt.ylabel(\"Sensor Readings\")\n",
     "    plt.show()\n",
     "\n",
-    "plot_hours(features[80,:,:])\n",
-    "plot_hours(features[3,:,:])\n",
-    "plot_hours(features[21,:,:])"
+    "\n",
+    "plot_hours(features[80, :, :])\n",
+    "plot_hours(features[3, :, :])\n",
+    "plot_hours(features[21, :, :])"
    ]
   },
   {
@@ -1112,12 +1113,13 @@
     "    max_sequence_len=features.shape[1],\n",
     "    sample_len=12,\n",
     "    batch_size=min(1000, features.shape[0]),\n",
-    "    apply_feature_scaling=False, # already scaled\n",
+    "    apply_feature_scaling=False,  # already scaled\n",
     "    apply_example_scaling=False,\n",
     "    use_attribute_discriminator=False,\n",
     "    generator_learning_rate=1e-4,\n",
     "    discriminator_learning_rate=1e-4,\n",
-    "    epochs=10000)\n",
+    "    epochs=10000,\n",
+    ")\n",
     "\n",
     "model = DGAN(config)"
    ]
@@ -11214,9 +11216,9 @@
    ],
    "source": [
     "# Show some synthetic 2-hour samples\n",
-    "plot_hours(synthetic_features[10,:,:])\n",
-    "plot_hours(synthetic_features[42,:,:])\n",
-    "plot_hours(synthetic_features[6,:,:])"
+    "plot_hours(synthetic_features[10, :, :])\n",
+    "plot_hours(synthetic_features[42, :, :])\n",
+    "plot_hours(synthetic_features[6, :, :])"
    ]
   },
   {
@@ -11247,10 +11249,12 @@
    ],
    "source": [
     "# Compare (non-temporal) correlations between the 4 sensors\n",
-    "synthetic_df = pd.DataFrame(synthetic_features.reshape(-1, synthetic_features.shape[2]), columns=sensor_cols)\n",
+    "synthetic_df = pd.DataFrame(\n",
+    "    synthetic_features.reshape(-1, synthetic_features.shape[2]), columns=sensor_cols\n",
+    ")\n",
     "\n",
     "print(\"Correlation in real data:\")\n",
-    "print(data_around_failures.drop(columns=[\"timestamp\",\"machine_status\"]).corr())\n",
+    "print(data_around_failures.drop(columns=[\"timestamp\", \"machine_status\"]).corr())\n",
     "print()\n",
     "print(\"Correlation in synthetic data:\")\n",
     "print(synthetic_df.corr())\n",
@@ -11279,10 +11283,12 @@
    ],
    "source": [
     "# Compare distribution of sensor_34 values\n",
-    "plt.hist([features[:,:,3].flatten(), synthetic_features[:,:,3].flatten()], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.hist(\n",
+    "    [features[:, :, 3].flatten(), synthetic_features[:, :, 3].flatten()],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Sensor 34 Values\")\n",
     "plt.ylabel(\"Density\")\n",
@@ -11310,10 +11316,12 @@
    ],
    "source": [
     "# Compare distribution of sensor_25 values\n",
-    "plt.hist([features[:,:,0].flatten(), synthetic_features[:,:,0].flatten()], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.hist(\n",
+    "    [features[:, :, 0].flatten(), synthetic_features[:, :, 0].flatten()],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Sensor 25 Values\")\n",
     "plt.ylabel(\"Density\")\n",
@@ -11341,10 +11349,12 @@
    ],
    "source": [
     "# Compare distribution of sensor_11 values\n",
-    "plt.hist([features[:,:,1].flatten(), synthetic_features[:,:,1].flatten()], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.hist(\n",
+    "    [features[:, :, 1].flatten(), synthetic_features[:, :, 1].flatten()],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Sensor 11 Values\")\n",
     "plt.ylabel(\"Density\")\n",
@@ -11372,10 +11382,12 @@
    ],
    "source": [
     "# Compare distribution of sensor_36 values\n",
-    "plt.hist([features[:,:,2].flatten(), synthetic_features[:,:,2].flatten()], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.hist(\n",
+    "    [features[:, :, 2].flatten(), synthetic_features[:, :, 2].flatten()],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Sensor 36 Values\")\n",
     "plt.ylabel(\"Density\")\n",
@@ -11389,12 +11401,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# saving model for future use \n",
+    "# saving model for future use\n",
     "model.save(\"dgan_model_0.pt\")\n",
     "\n",
     "# X = model.load(\"dgan_model_0.pt\")\n",
     "\n",
-    "# X\n"
+    "# X"
    ]
   },
   {
