--- a/notebooks/8-dgan-windowing.ipynb
+++ b/notebooks/8-dgan-windowing.ipynb
@@ -225,13 +225,13 @@
    ],
    "source": [
     "# https://www.kaggle.com/code/xiaxiaxu/predictmachinefailureinadvance/data\n",
-    "sensor = pd.read_csv('sensor.csv') \n",
+    "sensor = pd.read_csv(\"sensor.csv\")\n",
     "\n",
     "# data columns\n",
-    "COLS = ['sensor_25', 'sensor_11', 'sensor_36', 'sensor_34', 'machine_status']\n",
+    "COLS = [\"sensor_25\", \"sensor_11\", \"sensor_36\", \"sensor_34\", \"machine_status\"]\n",
     "\n",
     "# only keeping cols w high var in pca analysis + machine status\n",
-    "data = sensor[['timestamp'] + COLS]\n",
+    "data = sensor[[\"timestamp\"] + COLS]\n",
     "data"
    ]
   },
@@ -271,9 +271,9 @@
    "source": [
     "# lets convert our datatypes to the correct ones\n",
     "\n",
-    "print(data.dtypes, '\\n')\n",
+    "print(data.dtypes, \"\\n\")\n",
     "# i have no idea why i have to run this line twice for it to work.\n",
-    "data['timestamp']= pd.to_datetime(data['timestamp'])\n"
+    "data[\"timestamp\"] = pd.to_datetime(data[\"timestamp\"])"
    ]
   },
   {
@@ -323,9 +323,9 @@
     "# okay, what can our machine status be?\n",
     "\n",
     "# data = data.convert_dtypes()\n",
-    "print(data.dtypes, '\\n')\n",
+    "print(data.dtypes, \"\\n\")\n",
     "# i have no idea why i have to run this line twice for it to work.\n",
-    "data['timestamp']= pd.to_datetime(data['timestamp'])\n",
+    "data[\"timestamp\"] = pd.to_datetime(data[\"timestamp\"])\n",
     "\n",
     "data.machine_status.unique()"
    ]
@@ -563,7 +563,7 @@
     "# # let's now scale our data between 0-1\n",
     "\n",
     "# scaler = MinMaxScaler((0,1))\n",
-    "sensor_cols = ['sensor_25', 'sensor_11', 'sensor_36', 'sensor_34']\n",
+    "sensor_cols = [\"sensor_25\", \"sensor_11\", \"sensor_36\", \"sensor_34\"]\n",
     "\n",
     "# # scaling our data, then saving our scaler object for future use.\n",
     "# data_around_failures[sensor_cols] = scaler.fit_transform(data_around_failures[sensor_cols])\n",
@@ -591,14 +591,13 @@
     }
    ],
    "source": [
-    "# Plot the 4 scaled sensors \n",
+    "# Plot the 4 scaled sensors\n",
     "\n",
     "for c in COLS:\n",
-    "    if c == 'machine_status':\n",
+    "    if c == \"machine_status\":\n",
     "        continue\n",
-    "    plt.plot(data_around_failures[\"timestamp\"],\n",
-    "             data_around_failures[c], label=c)\n",
-    "    \n",
+    "    plt.plot(data_around_failures[\"timestamp\"], data_around_failures[c], label=c)\n",
+    "\n",
     "plt.xticks(rotation=90)\n",
     "plt.legend()\n",
     "plt.ylabel(\"Sensor Value\")\n",
@@ -622,8 +621,8 @@
    ],
    "source": [
     "# dropping timestamp col\n",
-    "features = data_around_failures.drop(columns=[\"timestamp\",\"machine_status\"]).to_numpy()\n",
-    "print(features.shape)\n"
+    "features = data_around_failures.drop(columns=[\"timestamp\", \"machine_status\"]).to_numpy()\n",
+    "print(features.shape)"
    ]
   },
   {
@@ -684,17 +683,19 @@
     "# note x-axis isnt accurate in these plots.\n",
     "# xaxis_4hr = data_around_failures[\"timestamp\"][0:240]\n",
     "\n",
+    "\n",
     "def plot_hours(f, ind):\n",
     "    # get the 4hr time period of these points - might be wrong\n",
     "    # but i think the logic is right.\n",
-    "    xaxis_4hr = data_around_failures[\"timestamp\"][ind*10:ind*10+240]\n",
-    "    \n",
+    "    xaxis_4hr = data_around_failures[\"timestamp\"][ind * 10 : ind * 10 + 240]\n",
+    "\n",
     "    for i, c in enumerate(sensor_cols):\n",
-    "        plt.plot(xaxis_4hr, f[:,i], label=c)\n",
+    "        plt.plot(xaxis_4hr, f[:, i], label=c)\n",
     "    ax = plt.gca()\n",
-    "    ax.xaxis.set_major_locator(md.HourLocator(byhour=range(2,24,3)))\n",
+    "    ax.xaxis.set_major_locator(md.HourLocator(byhour=range(2, 24, 3)))\n",
     "    ax.xaxis.set_major_formatter(md.DateFormatter(\"%H:%M\"))\n",
-    "    plt.legend(prop={'size': 7})\n",
+    "    plt.legend(prop={\"size\": 7})\n",
+    "\n",
     "\n",
     "figure = plt.figure(figsize=(10, 10))\n",
     "for i in range(1, 10):\n",
@@ -724,7 +725,7 @@
     }
    ],
    "source": [
-    "# Recommended to train with a GPU \n",
+    "# Recommended to train with a GPU\n",
     "torch.cuda.is_available()"
    ]
   },
@@ -739,14 +740,15 @@
     "\n",
     "config = DGANConfig(\n",
     "    max_sequence_len=windowed_data.shape[1],\n",
-    "    sample_len=20, # trying a larger sample_len\n",
+    "    sample_len=20,  # trying a larger sample_len\n",
     "    batch_size=min(1000, windowed_data.shape[0]),\n",
-    "    apply_feature_scaling=True, \n",
+    "    apply_feature_scaling=True,\n",
     "    apply_example_scaling=False,\n",
     "    use_attribute_discriminator=False,\n",
     "    generator_learning_rate=1e-4,\n",
     "    discriminator_learning_rate=1e-4,\n",
-    "    epochs=10000)\n",
+    "    epochs=10000,\n",
+    ")\n",
     "\n",
     "model = DGAN(config)"
    ]
@@ -10849,10 +10851,12 @@
    ],
    "source": [
     "# Compare (non-temporal) correlations between the 4 sensors\n",
-    "synthetic_df = pd.DataFrame(synthetic_features.reshape(-1, synthetic_features.shape[2]), columns=sensor_cols)\n",
+    "synthetic_df = pd.DataFrame(\n",
+    "    synthetic_features.reshape(-1, synthetic_features.shape[2]), columns=sensor_cols\n",
+    ")\n",
     "\n",
     "print(\"Correlation in real data:\")\n",
-    "print(data_around_failures.drop(columns=[\"timestamp\",\"machine_status\"]).corr())\n",
+    "print(data_around_failures.drop(columns=[\"timestamp\", \"machine_status\"]).corr())\n",
     "print()\n",
     "print(\"Correlation in synthetic data:\")\n",
     "print(synthetic_df.corr())\n",
@@ -10881,10 +10885,12 @@
    ],
    "source": [
     "# Compare distribution of sensor_34 values\n",
-    "plt.hist([windowed_data[:,:,3].flatten(), synthetic_features[:,:,3].flatten()], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.hist(\n",
+    "    [windowed_data[:, :, 3].flatten(), synthetic_features[:, :, 3].flatten()],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Sensor 34 Values\")\n",
     "plt.ylabel(\"Density\")\n",
@@ -10912,10 +10918,12 @@
    ],
    "source": [
     "# Compare distribution of sensor_25 values\n",
-    "plt.hist([windowed_data[:,:,0].flatten(), synthetic_features[:,:,0].flatten()], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.hist(\n",
+    "    [windowed_data[:, :, 0].flatten(), synthetic_features[:, :, 0].flatten()],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Sensor 25 Values\")\n",
     "plt.ylabel(\"Density\")\n",
@@ -10943,10 +10951,12 @@
    ],
    "source": [
     "# Compare distribution of sensor_11 values\n",
-    "plt.hist([windowed_data[:,:,1].flatten(), synthetic_features[:,:,1].flatten()], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.hist(\n",
+    "    [windowed_data[:, :, 1].flatten(), synthetic_features[:, :, 1].flatten()],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Sensor 11 Values\")\n",
     "plt.ylabel(\"Density\")\n",
@@ -10974,10 +10984,12 @@
    ],
    "source": [
     "# Compare distribution of sensor_36 values\n",
-    "plt.hist([windowed_data[:,:,2].flatten(), synthetic_features[:,:,2].flatten()], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.hist(\n",
+    "    [windowed_data[:, :, 2].flatten(), synthetic_features[:, :, 2].flatten()],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Sensor 36 Values\")\n",
     "plt.ylabel(\"Density\")\n",
@@ -10991,12 +11003,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# saving model for future use \n",
+    "# saving model for future use\n",
     "model.save(\"../models/dgan_model_1.pt\")\n",
     "\n",
     "# X = model.load(\"dgan_model_0.pt\")\n",
     "\n",
-    "# X\n"
+    "# X"
    ]
   }
  ],
