--- a/notebooks/9-dgan-testing.ipynb
+++ b/notebooks/9-dgan-testing.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sensor_cols = ['sensor_25', 'sensor_11', 'sensor_36', 'sensor_34']\n"
+    "sensor_cols = [\"sensor_25\", \"sensor_11\", \"sensor_36\", \"sensor_34\"]"
    ]
   },
   {
@@ -63,18 +63,19 @@
    "source": [
     "model = config = DGANConfig(\n",
     "    max_sequence_len=240,\n",
-    "    sample_len=20, # trying a larger sample_len\n",
+    "    sample_len=20,  # trying a larger sample_len\n",
     "    batch_size=min(1000, 985),\n",
-    "    apply_feature_scaling=True, \n",
+    "    apply_feature_scaling=True,\n",
     "    apply_example_scaling=False,\n",
     "    use_attribute_discriminator=False,\n",
     "    generator_learning_rate=1e-4,\n",
     "    discriminator_learning_rate=1e-4,\n",
-    "    epochs=10000)\n",
+    "    epochs=10000,\n",
+    ")\n",
     "\n",
     "model = DGAN(config)\n",
     "\n",
-    "model = model.load(\"../models/dgan_model_1.pt\", map_location=torch.device('cpu'))"
+    "model = model.load(\"../models/dgan_model_1.pt\", map_location=torch.device(\"cpu\"))"
    ]
   },
   {
