--- a/notebooks/1-sdv-pivoting-data.ipynb
+++ b/notebooks/1-sdv-pivoting-data.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "# https://www.kaggle.com/code/xiaxiaxu/predictmachinefailureinadvance/data\n",
-    "sensor = pd.read_csv('sensor.csv') "
+    "sensor = pd.read_csv(\"sensor.csv\")"
    ]
   },
   {
@@ -45,7 +45,9 @@
    "outputs": [],
    "source": [
     "# only keeping cols w high var in pca analysis + machine status\n",
-    "data = sensor[['timestamp', 'sensor_25', 'sensor_11', 'sensor_36', 'sensor_34', 'machine_status']]"
+    "data = sensor[\n",
+    "    [\"timestamp\", \"sensor_25\", \"sensor_11\", \"sensor_36\", \"sensor_34\", \"machine_status\"]\n",
+    "]"
    ]
   },
   {
@@ -85,8 +87,8 @@
     "# okay, what can our machine status be?\n",
     "\n",
     "data = data.convert_dtypes()\n",
-    "print(data.dtypes, '\\n')\n",
-    "data['timestamp']= pd.to_datetime(data['timestamp'])\n",
+    "print(data.dtypes, \"\\n\")\n",
+    "data[\"timestamp\"] = pd.to_datetime(data[\"timestamp\"])\n",
     "\n",
     "data.machine_status.unique()"
    ]
@@ -220,7 +222,7 @@
     }
    ],
    "source": [
-    "data.loc[data['machine_status'] == 'BROKEN']"
+    "data.loc[data[\"machine_status\"] == \"BROKEN\"]"
    ]
   },
   {
@@ -489,11 +491,11 @@
    ],
    "source": [
     "# encoding the machine status variable.\n",
-    "# doing it manually, its pretty simple \n",
+    "# doing it manually, its pretty simple\n",
     "\n",
-    "cleanup_nums = {\"machine_status\": {\"NORMAL\": 0, \"BROKEN\": 1, \"RECOVERING\":2}}\n",
+    "cleanup_nums = {\"machine_status\": {\"NORMAL\": 0, \"BROKEN\": 1, \"RECOVERING\": 2}}\n",
     "data_around_failures = data_around_failures.replace(cleanup_nums)\n",
-    "data_around_failures.head()\n"
+    "data_around_failures.head()"
    ]
   },
   {
@@ -504,12 +506,14 @@
    "outputs": [],
    "source": [
     "scaler = MinMaxScaler()\n",
-    "sensor_cols = ['sensor_25', 'sensor_11', 'sensor_36', 'sensor_34']\n",
+    "sensor_cols = [\"sensor_25\", \"sensor_11\", \"sensor_36\", \"sensor_34\"]\n",
     "\n",
     "# scaling our data, then saving our scaler object for future use.\n",
-    "data_around_failures[sensor_cols] = scaler.fit_transform(data_around_failures[sensor_cols])\n",
+    "data_around_failures[sensor_cols] = scaler.fit_transform(\n",
+    "    data_around_failures[sensor_cols]\n",
+    ")\n",
     "\n",
-    "dump(scaler, open('scaler.pkl', 'wb'))"
+    "dump(scaler, open(\"scaler.pkl\", \"wb\"))"
    ]
   },
   {
@@ -642,10 +646,10 @@
    "source": [
     "# now let's try 'melting' our data\n",
     "\n",
-    "melted = data_around_failures.melt('timestamp')\n",
-    "melted.sort_values(by='timestamp',inplace=True)\n",
+    "melted = data_around_failures.melt(\"timestamp\")\n",
+    "melted.sort_values(by=\"timestamp\", inplace=True)\n",
     "melted.reset_index(inplace=True)\n",
-    "melted = melted.drop('index', 1)"
+    "melted = melted.drop(\"index\", 1)"
    ]
   },
   {
@@ -799,12 +803,12 @@
    "source": [
     "# sanity check, pivoting our melted data back to see how that works.\n",
     "\n",
-    "pivoted = melted.pivot(index='timestamp', columns='variable', values='value')\n",
+    "pivoted = melted.pivot(index=\"timestamp\", columns=\"variable\", values=\"value\")\n",
     "\n",
     "print(pivoted.shape)\n",
     "pivoted.head(10)\n",
     "\n",
-    "# ok looks fine to me, we're missing an index column "
+    "# ok looks fine to me, we're missing an index column"
    ]
   },
   {
@@ -890,15 +894,19 @@
    ],
    "source": [
     "# encoding the 'variable' variable (not my best name)\n",
-    "# doing it manually, its pretty simple \n",
+    "# doing it manually, its pretty simple\n",
     "\n",
-    "# encoding them as strings not as ints - think that ints have messed things up \n",
+    "# encoding them as strings not as ints - think that ints have messed things up\n",
     "\n",
-    "cleanup_nums_var = {\"variable\": {\"machine_status\": '0',\n",
-    "                                 \"sensor_25\": '1',\n",
-    "                                 \"sensor_34\": '2',\n",
-    "                                 \"sensor_11\": '3',\n",
-    "                                 \"sensor_36\": '4'}}\n",
+    "cleanup_nums_var = {\n",
+    "    \"variable\": {\n",
+    "        \"machine_status\": \"0\",\n",
+    "        \"sensor_25\": \"1\",\n",
+    "        \"sensor_34\": \"2\",\n",
+    "        \"sensor_11\": \"3\",\n",
+    "        \"sensor_36\": \"4\",\n",
+    "    }\n",
+    "}\n",
     "melted = melted.replace(cleanup_nums_var)\n",
     "melted.head()"
    ]
@@ -932,9 +940,9 @@
     }
    ],
    "source": [
-    "melted['variable'] = melted.variable.astype('str')\n",
+    "melted[\"variable\"] = melted.variable.astype(\"str\")\n",
     "\n",
-    "melted['variable']"
+    "melted[\"variable\"]"
    ]
   },
   {
@@ -958,15 +966,20 @@
    "source": [
     "# okay, we have selected data around 2 anomalies, we have scaled our numerical values\n",
     "# and we have melted our data to be 'longer' rather than 'wider'\n",
-    "# also am leaving in the machine_status variable, perhaps will help with training : ) \n",
+    "# also am leaving in the machine_status variable, perhaps will help with training : )\n",
     "\n",
-    "sequence_index = 'timestamp'\n",
-    "entity_columns = ['variable']\n",
+    "sequence_index = \"timestamp\"\n",
+    "entity_columns = [\"variable\"]\n",
     "\n",
-    "model = PAR(sequence_index = sequence_index, entity_columns=entity_columns, verbose=True, epochs=64)\n",
+    "model = PAR(\n",
+    "    sequence_index=sequence_index,\n",
+    "    entity_columns=entity_columns,\n",
+    "    verbose=True,\n",
+    "    epochs=64,\n",
+    ")\n",
     "\n",
     "\n",
-    "print(melted.dtypes, '\\n')"
+    "print(melted.dtypes, \"\\n\")"
    ]
   },
   {
@@ -1011,7 +1024,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save('melted_model.pkl')"
+    "model.save(\"melted_model.pkl\")"
    ]
   },
   {
