--- a/notebooks/11-test-12hr-model.ipynb
+++ b/notebooks/11-test-12hr-model.ipynb
@@ -51,16 +51,24 @@
     }
    ],
    "source": [
-    "slice0 = pd.read_csv('../data/kagglePump/slice0.csv') \n",
-    "slice1 = pd.read_csv('../data/kagglePump/slice1.csv') \n",
-    "slice2 = pd.read_csv('../data/kagglePump/slice2.csv')\n",
-    "slice3 = pd.read_csv('../data/kagglePump/slice3.csv') \n",
-    "slice4 = pd.read_csv('../data/kagglePump/slice4.csv')\n",
-    "slice5 = pd.read_csv('../data/kagglePump/slice5.csv') \n",
-    "slice6 = pd.read_csv('../data/kagglePump/slice6.csv') \n",
+    "slice0 = pd.read_csv(\"../data/kagglePump/slice0.csv\")\n",
+    "slice1 = pd.read_csv(\"../data/kagglePump/slice1.csv\")\n",
+    "slice2 = pd.read_csv(\"../data/kagglePump/slice2.csv\")\n",
+    "slice3 = pd.read_csv(\"../data/kagglePump/slice3.csv\")\n",
+    "slice4 = pd.read_csv(\"../data/kagglePump/slice4.csv\")\n",
+    "slice5 = pd.read_csv(\"../data/kagglePump/slice5.csv\")\n",
+    "slice6 = pd.read_csv(\"../data/kagglePump/slice6.csv\")\n",
     "\n",
     "\n",
-    "print(slice0.shape, slice1.shape, slice2.shape, slice3.shape, slice4.shape, slice5.shape, slice6.shape)"
+    "print(\n",
+    "    slice0.shape,\n",
+    "    slice1.shape,\n",
+    "    slice2.shape,\n",
+    "    slice3.shape,\n",
+    "    slice4.shape,\n",
+    "    slice5.shape,\n",
+    "    slice6.shape,\n",
+    ")"
    ]
   },
   {
@@ -86,17 +94,17 @@
    "source": [
     "# prep for plotting\n",
     "slices_list = [slice0, slice1, slice2, slice3, slice4, slice5, slice6]\n",
-    "sensor_cols = ['sensor_25', 'sensor_11', 'sensor_36', 'sensor_34']\n",
+    "sensor_cols = [\"sensor_25\", \"sensor_11\", \"sensor_36\", \"sensor_34\"]\n",
     "\n",
     "# cast timestamps to be type datetime\n",
     "for sl in slices_list:\n",
-    "    sl['timestamp']= pd.to_datetime(sl['timestamp'])\n",
+    "    sl[\"timestamp\"] = pd.to_datetime(sl[\"timestamp\"])\n",
     "\n",
     "# remove 1st row to be same as data used in prev. nb\n",
     "for i in range(len(slices_list)):\n",
-    "    slices_list[i] = slices_list[i].iloc[1: , :]\n",
+    "    slices_list[i] = slices_list[i].iloc[1:, :]\n",
     "    print(len(slices_list[i]))\n",
-    "    \n",
+    "\n",
     "# create df of our dfs\n",
     "all_slices = pd.concat(slices_list)\n",
     "\n",
@@ -293,19 +301,20 @@
     "# set up DGAN config.\n",
     "\n",
     "config = DGANConfig(\n",
-    "    max_sequence_len=720, # hard coded from prev shape\n",
-    "    sample_len=20, # trying a larger sample_len\n",
+    "    max_sequence_len=720,  # hard coded from prev shape\n",
+    "    sample_len=20,  # trying a larger sample_len\n",
     "    batch_size=min(1000, 300),\n",
-    "    apply_feature_scaling=True, \n",
+    "    apply_feature_scaling=True,\n",
     "    apply_example_scaling=False,\n",
     "    use_attribute_discriminator=False,\n",
     "    generator_learning_rate=1e-4,\n",
     "    discriminator_learning_rate=1e-4,\n",
-    "    epochs=10000)\n",
+    "    epochs=10000,\n",
+    ")\n",
     "\n",
     "model = DGAN(config)\n",
     "\n",
-    "model = model.load(\"../models/dgan_model_2.pt\", map_location=torch.device('cpu'))"
+    "model = model.load(\"../models/dgan_model_2.pt\", map_location=torch.device(\"cpu\"))"
    ]
   },
   {
@@ -327,12 +336,11 @@
    "outputs": [],
    "source": [
     "def plot_12hr_slice(slice, ind):\n",
-    "    \n",
     "    for i, c in enumerate(sensor_cols):\n",
-    "        plt.plot(slice[:,i], label=c)\n",
+    "        plt.plot(slice[:, i], label=c)\n",
     "    ax = plt.gca()\n",
-    "    ax.title.set_text(\"Slice\" +str(ind))\n",
-    "    plt.legend(prop={'size': 7})"
+    "    ax.title.set_text(\"Slice\" + str(ind))\n",
+    "    plt.legend(prop={\"size\": 7})"
    ]
   },
   {
@@ -358,14 +366,14 @@
     "# plot random synthetic windows\n",
     "\n",
     "figure = plt.figure(figsize=(10, 10))\n",
-    "figure.suptitle(\"Synthetic 12hr Window plots\", fontsize=25, fontweight='roman')\n",
+    "figure.suptitle(\"Synthetic 12hr Window plots\", fontsize=25, fontweight=\"roman\")\n",
     "\n",
     "for i in range(9):\n",
-    "    figure.add_subplot(3, 3, i+1)\n",
+    "    figure.add_subplot(3, 3, i + 1)\n",
     "    index = np.random.choice(1000)\n",
     "    sl = synthetic_features[index]\n",
     "    plot_12hr_slice(sl, index)\n",
-    "    \n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -397,15 +405,17 @@
    ],
    "source": [
     "# Compare (non-temporal) correlations between the 4 sensors\n",
-    "synthetic_df = pd.DataFrame(synthetic_features.reshape(-1, synthetic_features.shape[2]), columns=sensor_cols)\n",
+    "synthetic_df = pd.DataFrame(\n",
+    "    synthetic_features.reshape(-1, synthetic_features.shape[2]), columns=sensor_cols\n",
+    ")\n",
     "\n",
     "print(\"Correlation in real data:\")\n",
-    "print(all_slices.drop(columns=[\"timestamp\",\"machine_status\"]).corr())\n",
+    "print(all_slices.drop(columns=[\"timestamp\", \"machine_status\"]).corr())\n",
     "print()\n",
     "print(\"Correlation in synthetic data:\")\n",
     "print(synthetic_df.corr())\n",
     "\n",
-    "# Correlations between sensor variables are worse now \n",
+    "# Correlations between sensor variables are worse now\n",
     "# Makes sense as we are using 6 different slices rather than 1.\n",
     "# will have to discuss if this is acceptable."
    ]
@@ -431,10 +441,12 @@
    ],
    "source": [
     "# Compare distribution of sensor_34 values\n",
-    "plt.hist([all_slices_np[:,4].flatten(), synthetic_features[:,:,3].flatten()], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.hist(\n",
+    "    [all_slices_np[:, 4].flatten(), synthetic_features[:, :, 3].flatten()],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Sensor 34 Values\")\n",
     "plt.ylabel(\"Density\")\n",
@@ -462,10 +474,12 @@
    ],
    "source": [
     "# Compare distribution of sensor_36 values\n",
-    "plt.hist([all_slices_np[:,3].flatten(), synthetic_features[:,:,2].flatten()], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.hist(\n",
+    "    [all_slices_np[:, 3].flatten(), synthetic_features[:, :, 2].flatten()],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Sensor 36 Values\")\n",
     "plt.ylabel(\"Density\")\n",
@@ -493,10 +507,12 @@
    ],
    "source": [
     "# Compare distribution of sensor_11 values\n",
-    "plt.hist([all_slices_np[:,2].flatten(), synthetic_features[:,:,1].flatten()], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.hist(\n",
+    "    [all_slices_np[:, 2].flatten(), synthetic_features[:, :, 1].flatten()],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Sensor 11 Values\")\n",
     "plt.ylabel(\"Density\")\n",
@@ -524,10 +540,12 @@
    ],
    "source": [
     "# Compare distribution of sensor_25 values\n",
-    "plt.hist([all_slices_np[:,1].flatten(), synthetic_features[:,:,0].flatten()], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.hist(\n",
+    "    [all_slices_np[:, 1].flatten(), synthetic_features[:, :, 0].flatten()],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Sensor 11 Values\")\n",
     "plt.ylabel(\"Density\")\n",
