--- a/notebooks/15-48-sensors-model-attempt0.ipynb
+++ b/notebooks/15-48-sensors-model-attempt0.ipynb
@@ -196,11 +196,11 @@
     }
    ],
    "source": [
-    "#https://www.kaggle.com/code/xiaxiaxu/predictmachinefailureinadvance/data\n",
-    "sensor = pd.read_csv('sensor.csv') \n",
+    "# https://www.kaggle.com/code/xiaxiaxu/predictmachinefailureinadvance/data\n",
+    "sensor = pd.read_csv(\"sensor.csv\")\n",
     "sensor.isnull().sum()\n",
-    "COLS_TO_DROP = ['Unnamed: 0','sensor_00', 'sensor_15', 'sensor_50', 'sensor_51']\n",
-    "sensor.drop(COLS_TO_DROP,axis=1, inplace=True)\n",
+    "COLS_TO_DROP = [\"Unnamed: 0\", \"sensor_00\", \"sensor_15\", \"sensor_50\", \"sensor_51\"]\n",
+    "sensor.drop(COLS_TO_DROP, axis=1, inplace=True)\n",
     "\n",
     "print(sensor.shape)"
    ]
@@ -272,9 +272,9 @@
    ],
    "source": [
     "# lets convert our datatypes to the correct ones\n",
-    "print(sensor.dtypes, '\\n')\n",
+    "print(sensor.dtypes, \"\\n\")\n",
     "# i have no idea why i have to run this line twice for it to work.\n",
-    "sensor['timestamp']= pd.to_datetime(sensor['timestamp'])"
+    "sensor[\"timestamp\"] = pd.to_datetime(sensor[\"timestamp\"])"
    ]
   },
   {
@@ -732,14 +732,14 @@
    ],
    "source": [
     "# subplot matrix\n",
-    "fig, axes = plt.subplots(10, 5, figsize=(20,20))\n",
+    "fig, axes = plt.subplots(10, 5, figsize=(20, 20))\n",
     "fig.tight_layout()\n",
     "\n",
     "for col, ax in zip(sensor.columns[1:-1], axes.flat):\n",
     "    sensor[col].plot.line(ax=ax)\n",
     "    ax.set_title(col)\n",
     "# disable leftover axes\n",
-    "for ax in axes.flat[sensor.columns[1:-1].size:]:\n",
+    "for ax in axes.flat[sensor.columns[1:-1].size :]:\n",
     "    ax.set_axis_off()"
    ]
   },
@@ -786,7 +786,7 @@
    ],
    "source": [
     "# dropping timestamp and machine_status columns\n",
-    "data_around_failures.drop(['timestamp', 'machine_status'], axis=1, inplace=True)\n",
+    "data_around_failures.drop([\"timestamp\", \"machine_status\"], axis=1, inplace=True)\n",
     "features = data_around_failures.to_numpy()\n",
     "print(features.shape)\n",
     "\n",
@@ -795,7 +795,7 @@
     "print(n)\n",
     "\n",
     "# reshape the data accordingly\n",
-    "features = features[:(n*120),:].reshape(-1, 120, features.shape[1])\n",
+    "features = features[: (n * 120), :].reshape(-1, 120, features.shape[1])\n",
     "# Shape is now (# examples, # time points, # features)\n",
     "print(features.shape)"
    ]
@@ -834,12 +834,13 @@
     "    max_sequence_len=features.shape[1],\n",
     "    sample_len=12,\n",
     "    batch_size=min(1000, features.shape[0]),\n",
-    "    apply_feature_scaling=True, # already scaled\n",
+    "    apply_feature_scaling=True,  # already scaled\n",
     "    apply_example_scaling=False,\n",
     "    use_attribute_discriminator=False,\n",
     "    generator_learning_rate=1e-4,\n",
     "    discriminator_learning_rate=1e-4,\n",
-    "    epochs=10000)\n",
+    "    epochs=10000,\n",
+    ")\n",
     "\n",
     "model = DGAN(config)"
    ]
@@ -10958,9 +10959,11 @@
     }
    ],
    "source": [
-    "# Weak correlations between synthetic and real data \n",
+    "# Weak correlations between synthetic and real data\n",
     "sensor_cols = data_around_failures.columns\n",
-    "synthetic_df = pd.DataFrame(synthetic_features.reshape(-1, synthetic_features.shape[2]), columns=sensor_cols)\n",
+    "synthetic_df = pd.DataFrame(\n",
+    "    synthetic_features.reshape(-1, synthetic_features.shape[2]), columns=sensor_cols\n",
+    ")\n",
     "data_around_failures.reset_index(inplace=True)\n",
     "data_around_failures.corrwith(synthetic_df)"
    ]
@@ -10985,12 +10988,12 @@
     }
    ],
    "source": [
-    "# Mutlicorrelation seems to be a problem in both the real and synthetic data; \n",
+    "# Mutlicorrelation seems to be a problem in both the real and synthetic data;\n",
     "# but at least this means that the synthetic data is mimicing the real data well.\n",
     "\n",
-    "fig, (ax1, ax2) = plt.subplots(1,2, figsize=(13,5))\n",
-    "sns.heatmap(data_around_failures.corr(),cmap='Greens',ax=ax1)\n",
-    "sns.heatmap(synthetic_df.corr(),cmap='Blues',ax=ax2)\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(13, 5))\n",
+    "sns.heatmap(data_around_failures.corr(), cmap=\"Greens\", ax=ax1)\n",
+    "sns.heatmap(synthetic_df.corr(), cmap=\"Blues\", ax=ax2)\n",
     "plt.show()"
    ]
   },
@@ -11016,14 +11019,14 @@
    "source": [
     "# Scatterplot matrix for synthetic sensor data\n",
     "\n",
-    "fig, axes = plt.subplots(10, 5, figsize=(20,20))\n",
+    "fig, axes = plt.subplots(10, 5, figsize=(20, 20))\n",
     "fig.tight_layout()\n",
     "\n",
     "for col, ax in zip(synthetic_df.columns, axes.flat):\n",
     "    synthetic_df[col].plot.line(ax=ax)\n",
     "    ax.set_title(col)\n",
     "# disable leftover axes\n",
-    "for ax in axes.flat[synthetic_df.columns.size:]:\n",
+    "for ax in axes.flat[synthetic_df.columns.size :]:\n",
     "    ax.set_axis_off()"
    ]
   },
@@ -11049,10 +11052,12 @@
    "source": [
     "# Compare distribution of sensor_34 values\n",
     "\n",
-    "plt.hist([data_around_failures['sensor_34'], synthetic_df['sensor_34']], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.hist(\n",
+    "    [data_around_failures[\"sensor_34\"], synthetic_df[\"sensor_34\"]],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Sensor 34 Values\")\n",
     "plt.ylabel(\"Density\")\n",
@@ -11081,10 +11086,12 @@
    "source": [
     "# Compare distribution of sensor_25 values\n",
     "\n",
-    "plt.hist([data_around_failures['sensor_25'], synthetic_df['sensor_25']], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.hist(\n",
+    "    [data_around_failures[\"sensor_25\"], synthetic_df[\"sensor_25\"]],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Sensor 25 Values\")\n",
     "plt.ylabel(\"Density\")\n",
@@ -11113,10 +11120,12 @@
    "source": [
     "# Compare distribution of sensor_11 values\n",
     "\n",
-    "plt.hist([data_around_failures['sensor_11'], synthetic_df['sensor_11']], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.hist(\n",
+    "    [data_around_failures[\"sensor_11\"], synthetic_df[\"sensor_11\"]],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Sensor 11 Values\")\n",
     "plt.ylabel(\"Density\")\n",
@@ -11145,10 +11154,12 @@
    "source": [
     "# Compare distribution of sensor_36 values\n",
     "\n",
-    "plt.hist([data_around_failures['sensor_36'], synthetic_df['sensor_36']], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.hist(\n",
+    "    [data_around_failures[\"sensor_36\"], synthetic_df[\"sensor_36\"]],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Sensor 36 Values\")\n",
     "plt.ylabel(\"Density\")\n",
@@ -11162,7 +11173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# saving model for future use \n",
+    "# saving model for future use\n",
     "model.save(\"dgan_model_3_48_sensors.pt\")\n",
     "\n",
     "# X = model.load(\"dgan_model_3_48_sensors.pt\")\n",
