--- a/notebooks/19-model4-vs-model5.ipynb
+++ b/notebooks/19-model4-vs-model5.ipynb
@@ -126,7 +126,7 @@
     }
    ],
    "source": [
-    "!pip install torch==1.11.0 \n",
+    "!pip install torch==1.11.0\n",
     "!pip install git+https://github.com/gretelai/gretel-synthetics.git"
    ]
   },
@@ -168,15 +168,23 @@
     }
    ],
    "source": [
-    "slice0 = pd.read_csv('../data/kagglePump/full_slice0.csv') \n",
-    "slice1 = pd.read_csv('../data/kagglePump/full_slice1.csv') \n",
-    "slice2 = pd.read_csv('../data/kagglePump/full_slice2.csv')\n",
-    "slice3 = pd.read_csv('../data/kagglePump/full_slice3.csv') \n",
-    "slice4 = pd.read_csv('../data/kagglePump/full_slice4.csv')\n",
-    "slice5 = pd.read_csv('../data/kagglePump/full_slice5.csv') \n",
-    "slice6 = pd.read_csv('../data/kagglePump/full_slice6.csv') \n",
+    "slice0 = pd.read_csv(\"../data/kagglePump/full_slice0.csv\")\n",
+    "slice1 = pd.read_csv(\"../data/kagglePump/full_slice1.csv\")\n",
+    "slice2 = pd.read_csv(\"../data/kagglePump/full_slice2.csv\")\n",
+    "slice3 = pd.read_csv(\"../data/kagglePump/full_slice3.csv\")\n",
+    "slice4 = pd.read_csv(\"../data/kagglePump/full_slice4.csv\")\n",
+    "slice5 = pd.read_csv(\"../data/kagglePump/full_slice5.csv\")\n",
+    "slice6 = pd.read_csv(\"../data/kagglePump/full_slice6.csv\")\n",
     "\n",
-    "print(slice0.shape, slice1.shape, slice2.shape, slice3.shape, slice4.shape, slice5.shape, slice6.shape)"
+    "print(\n",
+    "    slice0.shape,\n",
+    "    slice1.shape,\n",
+    "    slice2.shape,\n",
+    "    slice3.shape,\n",
+    "    slice4.shape,\n",
+    "    slice5.shape,\n",
+    "    slice6.shape,\n",
+    ")"
    ]
   },
   {
@@ -208,21 +216,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "COLS_TO_DROP = ['Unnamed: 0','sensor_00', 'sensor_15', \n",
-    "                'sensor_50', 'sensor_51']\n",
-    "cleanup_nums = {\"machine_status\": {\"NORMAL\": 0,\n",
-    "                                   \"BROKEN\": 1,\n",
-    "                                   \"RECOVERING\":2}}\n",
+    "COLS_TO_DROP = [\"Unnamed: 0\", \"sensor_00\", \"sensor_15\", \"sensor_50\", \"sensor_51\"]\n",
+    "cleanup_nums = {\"machine_status\": {\"NORMAL\": 0, \"BROKEN\": 1, \"RECOVERING\": 2}}\n",
     "\n",
     "for sl in slices_list:\n",
-    "    sl['timestamp']= pd.to_datetime(sl['timestamp']) # cast to datatype\n",
-    "    sl = sl.drop(COLS_TO_DROP,axis=1, inplace=True) # drop cols\n",
+    "    sl[\"timestamp\"] = pd.to_datetime(sl[\"timestamp\"])  # cast to datatype\n",
+    "    sl = sl.drop(COLS_TO_DROP, axis=1, inplace=True)  # drop cols\n",
     "\n",
     "for sl in slices_list:\n",
     "    sl = sl.replace(cleanup_nums)\n",
     "\n",
     "for sl in slices_list:\n",
-    "    sl = sl.dropna(axis=0, inplace=True) # drop nans"
+    "    sl = sl.dropna(axis=0, inplace=True)  # drop nans"
    ]
   },
   {
@@ -235,14 +240,15 @@
     "# set up DGAN config.\n",
     "config = DGANConfig(\n",
     "    max_sequence_len=720,\n",
-    "    sample_len=20, # trying a larger sample_len\n",
+    "    sample_len=20,  # trying a larger sample_len\n",
     "    batch_size=300,\n",
-    "    apply_feature_scaling=True, \n",
+    "    apply_feature_scaling=True,\n",
     "    apply_example_scaling=False,\n",
     "    use_attribute_discriminator=False,\n",
     "    generator_learning_rate=1e-4,\n",
     "    discriminator_learning_rate=1e-4,\n",
-    "    epochs=10000)\n",
+    "    epochs=10000,\n",
+    ")\n",
     "\n",
     "model = DGAN(config)"
    ]
@@ -255,8 +261,12 @@
    "outputs": [],
    "source": [
     "# loading model 4 and 5\n",
-    "model4 = model.load(\"../models/dgan_model_4_48_sensors.pt\",  map_location=torch.device('cpu'))\n",
-    "model5 = model.load(\"../models/dgan_model_5_48_sensors.pt\",  map_location=torch.device('cpu'))"
+    "model4 = model.load(\n",
+    "    \"../models/dgan_model_4_48_sensors.pt\", map_location=torch.device(\"cpu\")\n",
+    ")\n",
+    "model5 = model.load(\n",
+    "    \"../models/dgan_model_5_48_sensors.pt\", map_location=torch.device(\"cpu\")\n",
+    ")"
    ]
   },
   {
@@ -290,7 +300,7 @@
    ],
    "source": [
     "# 1000 samples of 720 cols x 49 rows\n",
-    "synthetic_features4.shape \n",
+    "synthetic_features4.shape\n",
     "synthetic_features5.shape"
    ]
   },
@@ -312,8 +322,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "synthetic_df_4 = pd.DataFrame(synthetic_features4.reshape(-1, synthetic_features4.shape[2]), columns=sensor_cols)\n",
-    "synthetic_df_5 = pd.DataFrame(synthetic_features5.reshape(-1, synthetic_features5.shape[2]), columns=sensor_cols)"
+    "synthetic_df_4 = pd.DataFrame(\n",
+    "    synthetic_features4.reshape(-1, synthetic_features4.shape[2]), columns=sensor_cols\n",
+    ")\n",
+    "synthetic_df_5 = pd.DataFrame(\n",
+    "    synthetic_features5.reshape(-1, synthetic_features5.shape[2]), columns=sensor_cols\n",
+    ")"
    ]
   },
   {
@@ -532,8 +546,8 @@
    "source": [
     "# Concatenating list of dfs into one large one\n",
     "slices_list\n",
-    "real_slices=pd.concat(slices_list) \n",
-    "real_slices.drop(['timestamp'], axis=1, inplace=True)\n",
+    "real_slices = pd.concat(slices_list)\n",
+    "real_slices.drop([\"timestamp\"], axis=1, inplace=True)\n",
     "real_slices.head()"
    ]
   },
@@ -580,14 +594,14 @@
    ],
    "source": [
     "# Correlation matrices: real,synthetic 4,synthetic 5\n",
-    "fig, (ax1, ax2, ax3) = plt.subplots(1,3, figsize=(20,5))\n",
-    "sns.heatmap(real_slices.corr(),cmap='Greens',ax=ax1)\n",
-    "sns.heatmap(synthetic_df_4.corr(),cmap='Blues',ax=ax2)\n",
-    "sns.heatmap(synthetic_df_5.corr(), cmap=\"BuPu\",ax=ax3)\n",
+    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(20, 5))\n",
+    "sns.heatmap(real_slices.corr(), cmap=\"Greens\", ax=ax1)\n",
+    "sns.heatmap(synthetic_df_4.corr(), cmap=\"Blues\", ax=ax2)\n",
+    "sns.heatmap(synthetic_df_5.corr(), cmap=\"BuPu\", ax=ax3)\n",
     "\n",
-    "ax1.set_title('Real Data')\n",
-    "ax2.set_title('Synthetic Data 4')\n",
-    "ax3.set_title('Synthetic Data 5')\n",
+    "ax1.set_title(\"Real Data\")\n",
+    "ax2.set_title(\"Synthetic Data 4\")\n",
+    "ax3.set_title(\"Synthetic Data 5\")\n",
     "plt.show()"
    ]
   },
@@ -622,12 +636,12 @@
    ],
    "source": [
     "# Let check for differences in correlation\n",
-    "real_synthetic4_corr = (real_slices.corr()-synthetic_df_4.corr()).abs()\n",
-    "real_synthetic5_corr = (real_slices.corr()-synthetic_df_4.corr()).abs()\n",
+    "real_synthetic4_corr = (real_slices.corr() - synthetic_df_4.corr()).abs()\n",
+    "real_synthetic5_corr = (real_slices.corr() - synthetic_df_4.corr()).abs()\n",
     "\n",
-    "fig, (ax1, ax2) = plt.subplots(1,2, figsize=(15,5))\n",
-    "sns.heatmap(real_synthetic4_corr,cmap='viridis',ax=ax1)\n",
-    "sns.heatmap(real_synthetic5_corr,cmap='magma',ax=ax2)"
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 5))\n",
+    "sns.heatmap(real_synthetic4_corr, cmap=\"viridis\", ax=ax1)\n",
+    "sns.heatmap(real_synthetic5_corr, cmap=\"magma\", ax=ax2)"
    ]
   },
   {
@@ -804,27 +818,31 @@
    ],
    "source": [
     "# Compare distributions of sensor_34 values\n",
-    "plt.subplot(1,2,1)                \n",
-    "plt.hist([real_slices['sensor_34'], synthetic_df_4['sensor_34']], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.hist(\n",
+    "    [real_slices[\"sensor_34\"], synthetic_df_4[\"sensor_34\"]],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.xlabel(\"Sensor 34 Values\")\n",
     "plt.ylabel(\"Density\")\n",
     "plt.title(\" Real vs. Synthetic 4\")\n",
     "\n",
-    "plt.subplot(1,2,2)               \n",
-    "plt.hist([real_slices['sensor_34'], synthetic_df_5['sensor_34']], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.hist(\n",
+    "    [real_slices[\"sensor_34\"], synthetic_df_5[\"sensor_34\"]],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.xlabel(\"Sensor 34 Values\")\n",
     "plt.ylabel(\"Density\")\n",
     "plt.title(\" Real vs. Synthetic 5\")\n",
     "plt.legend()\n",
     "\n",
-    "plt.tight_layout()                \n",
-    "plt.show()     "
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -848,27 +866,31 @@
    ],
    "source": [
     "# Compare distributions of sensor_25 values\n",
-    "plt.subplot(1,2,1)                \n",
-    "plt.hist([real_slices['sensor_25'], synthetic_df_4['sensor_25']], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.hist(\n",
+    "    [real_slices[\"sensor_25\"], synthetic_df_4[\"sensor_25\"]],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.xlabel(\"Sensor 25 Values\")\n",
     "plt.ylabel(\"Density\")\n",
     "plt.title(\" Real vs. Synthetic 4\")\n",
     "\n",
-    "plt.subplot(1,2,2)               \n",
-    "plt.hist([real_slices['sensor_25'], synthetic_df_5['sensor_25']], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.hist(\n",
+    "    [real_slices[\"sensor_25\"], synthetic_df_5[\"sensor_25\"]],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.xlabel(\"Sensor 25 Values\")\n",
     "plt.ylabel(\"Density\")\n",
     "plt.title(\" Real vs. Synthetic 5\")\n",
     "plt.legend()\n",
     "\n",
-    "plt.tight_layout()                \n",
-    "plt.show()     "
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -892,27 +914,31 @@
    ],
    "source": [
     "# Compare distributions of sensor_11 values\n",
-    "plt.subplot(1,2,1)                \n",
-    "plt.hist([real_slices['sensor_11'], synthetic_df_4['sensor_11']], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.hist(\n",
+    "    [real_slices[\"sensor_11\"], synthetic_df_4[\"sensor_11\"]],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.xlabel(\"Sensor 11 Values\")\n",
     "plt.ylabel(\"Density\")\n",
     "plt.title(\" Real vs. Synthetic 4\")\n",
     "\n",
-    "plt.subplot(1,2,2)               \n",
-    "plt.hist([real_slices['sensor_11'], synthetic_df_5['sensor_11']], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.hist(\n",
+    "    [real_slices[\"sensor_11\"], synthetic_df_5[\"sensor_11\"]],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.xlabel(\"Sensor 11 Values\")\n",
     "plt.ylabel(\"Density\")\n",
     "plt.title(\" Real vs. Synthetic 5\")\n",
     "plt.legend()\n",
     "\n",
-    "plt.tight_layout()                \n",
-    "plt.show()     "
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -936,27 +962,31 @@
    ],
    "source": [
     "# Compare distributions of sensor_36 values\n",
-    "plt.subplot(1,2,1)                \n",
-    "plt.hist([real_slices['sensor_36'], synthetic_df_4['sensor_36']], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.hist(\n",
+    "    [real_slices[\"sensor_36\"], synthetic_df_4[\"sensor_36\"]],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.xlabel(\"Sensor 36 Values\")\n",
     "plt.ylabel(\"Density\")\n",
     "plt.title(\" Real vs. Synthetic 4\")\n",
     "\n",
-    "plt.subplot(1,2,2)               \n",
-    "plt.hist([real_slices['sensor_36'], synthetic_df_5['sensor_36']], \n",
-    "         label=[\"real\", \"synthetic\"],\n",
-    "         bins=25,\n",
-    "         density=True)\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.hist(\n",
+    "    [real_slices[\"sensor_36\"], synthetic_df_5[\"sensor_36\"]],\n",
+    "    label=[\"real\", \"synthetic\"],\n",
+    "    bins=25,\n",
+    "    density=True,\n",
+    ")\n",
     "plt.xlabel(\"Sensor 36 Values\")\n",
     "plt.ylabel(\"Density\")\n",
     "plt.title(\" Real vs. Synthetic 5\")\n",
     "plt.legend()\n",
     "\n",
-    "plt.tight_layout()                \n",
-    "plt.show()     "
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -974,7 +1004,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PCA \n",
+    "# PCA\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
@@ -996,7 +1026,7 @@
     "real_slices_covar = np.cov(np.transpose(np.array(real_slices_scaled)))\n",
     "synthetic_df_4_covar = np.cov(np.transpose(np.array(synthetic_df_4_scaled)))\n",
     "synthetic_df_5_covar = np.cov(np.transpose(np.array(synthetic_df_5_scaled)))\n",
-    "                                                                  \n",
+    "\n",
     "pca_real_slices = pca.fit(real_slices_covar).transform(real_slices_covar)\n",
     "pca_synthetic_df_4 = pca.fit(synthetic_df_4_covar).transform(synthetic_df_4_covar)\n",
     "pca_synthetic_df_5 = pca.fit(synthetic_df_5_covar).transform(synthetic_df_5_covar)"
@@ -1009,11 +1039,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def components_to_corr(pca_array1,pca_array2):\n",
-    "    df1,df2 = pd.DataFrame(pca_array1, columns = ['comp1','comp2']), pd.DataFrame(pca_array2, columns = ['comp1','comp2'])\n",
-    "    df_vertically_appended1 = df1['comp1'].append(df1['comp2']).reset_index(drop=True)\n",
-    "    df_vertically_appended2 = df2['comp1'].append(df2['comp2']).reset_index(drop=True)\n",
-    "    return (np.corrcoef(df_vertically_appended1,df_vertically_appended2)[0,1])"
+    "def components_to_corr(pca_array1, pca_array2):\n",
+    "    df1, df2 = pd.DataFrame(pca_array1, columns=[\"comp1\", \"comp2\"]), pd.DataFrame(\n",
+    "        pca_array2, columns=[\"comp1\", \"comp2\"]\n",
+    "    )\n",
+    "    df_vertically_appended1 = df1[\"comp1\"].append(df1[\"comp2\"]).reset_index(drop=True)\n",
+    "    df_vertically_appended2 = df2[\"comp1\"].append(df2[\"comp2\"]).reset_index(drop=True)\n",
+    "    return np.corrcoef(df_vertically_appended1, df_vertically_appended2)[0, 1]"
    ]
   },
   {
@@ -1033,9 +1065,17 @@
     }
    ],
    "source": [
-    "print('The correlation between real data and synthetic data 4 is {}'.format(components_to_corr(pca_real_slices, pca_synthetic_df_4)))\n",
+    "print(\n",
+    "    \"The correlation between real data and synthetic data 4 is {}\".format(\n",
+    "        components_to_corr(pca_real_slices, pca_synthetic_df_4)\n",
+    "    )\n",
+    ")\n",
     "print()\n",
-    "print('The correlation between real data and synthetic data 5 is {}'.format(components_to_corr(pca_real_slices, pca_synthetic_df_5)))"
+    "print(\n",
+    "    \"The correlation between real data and synthetic data 5 is {}\".format(\n",
+    "        components_to_corr(pca_real_slices, pca_synthetic_df_5)\n",
+    "    )\n",
+    ")"
    ]
   },
   {
