--- a/notebooks/3-sdv-model-per-sensor.ipynb
+++ b/notebooks/3-sdv-model-per-sensor.ipynb
@@ -33,10 +33,12 @@
    "outputs": [],
    "source": [
     "# https://www.kaggle.com/code/xiaxiaxu/predictmachinefailureinadvance/data\n",
-    "sensor = pd.read_csv('sensor.csv') \n",
+    "sensor = pd.read_csv(\"sensor.csv\")\n",
     "\n",
     "# only keeping cols w high var in pca analysis + machine status\n",
-    "data = sensor[['timestamp', 'sensor_25', 'sensor_11', 'sensor_36', 'sensor_34', 'machine_status']]"
+    "data = sensor[\n",
+    "    [\"timestamp\", \"sensor_25\", \"sensor_11\", \"sensor_36\", \"sensor_34\", \"machine_status\"]\n",
+    "]"
    ]
   },
   {
@@ -147,7 +149,7 @@
    ],
    "source": [
     "data_around_failures = data.iloc[16000:26000]\n",
-    "data_around_failures.head() "
+    "data_around_failures.head()"
    ]
   },
   {
@@ -170,7 +172,7 @@
     }
    ],
    "source": [
-    "data_around_failures['timestamp']= pd.to_datetime(data_around_failures['timestamp'])\n"
+    "data_around_failures[\"timestamp\"] = pd.to_datetime(data_around_failures[\"timestamp\"])"
    ]
   },
   {
@@ -291,7 +293,7 @@
     }
    ],
    "source": [
-    "sensor_25_data = data_around_failures[['timestamp', 'sensor_25']]\n",
+    "sensor_25_data = data_around_failures[[\"timestamp\", \"sensor_25\"]]\n",
     "sensor_25_data.head()"
    ]
   },
@@ -327,7 +329,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "sensor_25_data.set_index('timestamp').plot()"
+    "sensor_25_data.set_index(\"timestamp\").plot()"
    ]
   },
   {
@@ -359,9 +361,11 @@
     "sensor_25_scaler = MinMaxScaler()\n",
     "\n",
     "# scaling our data, then saving our scaler object for future use.\n",
-    "sensor_25_data[['sensor_25']] = sensor_25_scaler.fit_transform(sensor_25_data[['sensor_25']])\n",
+    "sensor_25_data[[\"sensor_25\"]] = sensor_25_scaler.fit_transform(\n",
+    "    sensor_25_data[[\"sensor_25\"]]\n",
+    ")\n",
     "\n",
-    "dump(sensor_25_scaler, open('sensor_25_scaler.pkl', 'wb'))"
+    "dump(sensor_25_scaler, open(\"sensor_25_scaler.pkl\", \"wb\"))"
    ]
   },
   {
@@ -465,8 +469,8 @@
    "source": [
     "# okay, we should be set to train our first model. let's give it a go!\n",
     "\n",
-    "sequence_index = 'timestamp'\n",
-    "sensor_25_model = PAR(sequence_index = sequence_index, verbose=True, epochs=48)\n"
+    "sequence_index = \"timestamp\"\n",
+    "sensor_25_model = PAR(sequence_index=sequence_index, verbose=True, epochs=48)"
    ]
   },
   {
@@ -501,7 +505,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sensor_25_model.save('25_model.pkl')"
+    "sensor_25_model.save(\"25_model.pkl\")"
    ]
   },
   {
